Outros html e alguns .py

--- a/app/files/about_frameworks/asvs_v4.0.1.html
+++ b/app/files/about_frameworks/asvs_v4.0.1.html
@@ -1,38 +1,25 @@
+
 <div class="p-4 text-sm">
-  <h2 class="my-4 text-xl font-semibold">About ASVS</h2>
-
+  <h2 class="my-4 text-xl font-semibold">Sobre o ASVS</h2>
   <p class="mb-2">
-    The Application Security Verification Standard (ASVS) is a security framework that is used to define security
-    requirements for applications and APIs. It was developed by the Open Web Application Security Project (OWASP) to
-    provide a consistent set of security requirements that can be used to evaluate the security of applications and
-    APIs.
+    O Application Security Verification Standard (ASVS) é uma estrutura de segurança usada para definir requisitos de segurança para aplicações e APIs. Foi desenvolvido pelo Open Web Application Security Project (OWASP) para fornecer um conjunto consistente de requisitos de segurança que podem ser usados para avaliar a segurança de aplicações e APIs.
   </p>
   <p class="mb-2">
-    The ASVS was designed to provide a comprehensive set of security requirements that can be used to evaluate the
-    security of an application or API. It is divided into three different levels (Level 1, 2, and 3) each of which
-    provides a different level of security assurance. Level 1 is the most basic level, and is designed to cover basic
-    security requirements such as authentication, authorization, input validation, and output encoding. Level 2 covers
-    more advanced security requirements such as authentication and authorization methods, encryption, and logging. Level
-    3 covers the most comprehensive security requirements, including application firewalls, authentication and
-    authorization methods, encryption, logging, and audit trails.
+    O ASVS foi projetado para fornecer um conjunto abrangente de requisitos de segurança que podem ser usados para avaliar a segurança de uma aplicação ou API. Ele é dividido em três níveis diferentes (Nível 1, 2 e 3), cada um dos quais fornece um nível diferente de garantia de segurança. O Nível 1 é o nível mais básico, e é projetado para cobrir requisitos básicos de segurança, como autenticação, autorização, validação de entrada e codificação de saída. O Nível 2 cobre requisitos de segurança mais avançados, como métodos de autenticação e autorização, criptografia e registro de atividades. O Nível 3 cobre os requisitos de segurança mais abrangentes, incluindo firewalls de aplicação, métodos de autenticação e autorização, criptografia, registro de atividades e trilhas de auditoria.
   </p>
   <p class="mb-2">
-    The ASVS provides a comprehensive set of security requirements that can be used to ensure that applications and APIs
-    are secure. It is important to note that the ASVS is not a replacement for traditional security testing, but rather
-    should be used in addition to traditional security testing. Additionally, the ASVS is not a silver bullet and cannot
-    guarantee secure applications and APIs, but it does provide a framework for assessing the security of applications
-    and APIs.
+    O ASVS fornece um conjunto abrangente de requisitos de segurança que podem ser usados para garantir que aplicações e APIs sejam seguras. É importante notar que o ASVS não é um substituto para os testes de segurança tradicionais, mas deve ser usado em conjunto com os testes de segurança tradicionais. Além disso, o ASVS não é uma solução mágica e não pode garantir a segurança de aplicações e APIs, mas fornece uma estrutura para avaliar a segurança de aplicações e APIs.
   </p>
   <p class="mb-2">
-    Overall, the ASVS is a comprehensive security framework that can be used to ensure that applications and APIs are
-    secure. It is important to note that the ASVS is not a replacement for traditional security testing, but rather
-    should be used in addition to traditional security testing. Additionally, the ASVS is not a silver bullet and cannot
-    guarantee secure applications and APIs, but it does provide a framework for assessing the security of applications
-    and APIs.
+    Em resumo, o ASVS é uma estrutura de segurança abrangente que pode ser usada para garantir que aplicações e APIs sejam seguras. É importante notar que o ASVS não é um substituto para os testes de segurança tradicionais, mas deve ser usado em conjunto com os testes de segurança tradicionais. Além disso, o ASVS não é uma solução mágica e não pode garantir a segurança de aplicações e APIs, mas fornece uma estrutura para avaliar a segurança de aplicações e APIs.
   </p>
-
-  <h2 class="my-4 text-xl font-semibold">Vendor Recommendations</h2>
+  <h2 class="my-4 text-xl font-semibold">Recomendações dos Fornecedores</h2>
   <p class="mb-2">
-    Coming Soon!
+    Em breve!
   </p>
 </div>
+
+
+
+
+
