--- a/app/files/about_frameworks/cmmc.html
+++ b/app/files/about_frameworks/cmmc.html
@@ -1,43 +1,43 @@
 <div class="p-4 text-sm">
-  <h2 class="my-4 text-xl font-semibold">About CMMC</h2>
+  <h2 class="my-4 text-xl font-semibold">Sobre o CMMC</h2>
 
   <p class="mb-2">
-    The CMMC framework is a security standard developed by the United States Department of Defense (DoD) to protect its
-    systems and networks from cyberattacks. The goal of the CMMC framework is to ensure that all contractors,
-    subcontractors, and vendors that are doing business with the DoD have appropriate levels of cybersecurity measures
-    in place.
+    A estrutura CMMC é um padrão de segurança desenvolvido pelo Departamento de Defesa dos Estados Unidos (DoD) para proteger seus
+    sistemas e redes contra ataques cibernéticos. O objetivo da estrutura do CMMC é garantir que todos os empreiteiros,
+    subcontratados e fornecedores que fazem negócios com o DoD têm níveis apropriados de medidas de segurança cibernética
+    no lugar.
   </p>
   <p class="mb-2">
 
-    The CMMC framework consists of five levels, ranging from basic cyber hygiene to advanced cyber practices. Each level
-    has a set of best practices and controls that must be implemented in order to meet the requirements of the CMMC. For
-    instance, Level 1 requires basic cyber hygiene measures such as patch management, user access controls, and
-    encryption. Level 5 requires advanced practices such as incident response, supply chain risk management, and data
-    integrity.
+    A estrutura do CMMC consiste em cinco níveis, que vão desde a higiene cibernética básica até práticas cibernéticas avançadas. Cada nível
+    possui um conjunto de melhores práticas e controles que devem ser implementados para atender aos requisitos do CMMC. Para
+    Por exemplo, o Nível 1 exige medidas básicas de higiene cibernética, como gerenciamento de patches, controles de acesso de usuários e
+    criptografia. O nível 5 requer práticas avançadas, como resposta a incidentes, gestão de riscos da cadeia de suprimentos e dados
+    integridade.
   </p>
   <p class="mb-2">
 
-    The DoD requires all contractors and vendors doing business with the DoD to be certified at the appropriate CMMC
-    level. This certification process includes a review of the contractor’s or vendor’s cybersecurity practices and
-    controls. The DoD also requires all contractors and vendors to be audited every three years to ensure that the
-    appropriate level of security is being maintained.
+    O DoD exige que todos os contratados e fornecedores que fazem negócios com o DoD sejam certificados no CMMC apropriado
+    nível. Este processo de certificação inclui uma revisão das práticas de segurança cibernética do contratante ou fornecedor e
+    controles. O DoD também exige que todos os empreiteiros e fornecedores sejam auditados a cada três anos para garantir que o
+    nível adequado de segurança está sendo mantido.
   </p>
   <p class="mb-2">
 
-    The CMMC framework is an important step in protecting the networks and systems of the DoD. By requiring contractors
-    and vendors to implement strong cybersecurity measures, the DoD is better able to protect its systems and data from
-    malicious actors. It also helps to ensure that contractors and vendors are held accountable for their security
-    practices.
+    A estrutura CMMC é um passo importante na proteção das redes e sistemas do DoD. Ao exigir que os empreiteiros
+    e fornecedores para implementar fortes medidas de segurança cibernética, o DoD está mais apto a proteger seus sistemas e dados contra
+    atores maliciosos. Também ajuda a garantir que empreiteiros e fornecedores sejam responsabilizados por sua segurança
+    práticas.
   </p>
   <p class="mb-2">
 
-    The CMMC framework is an important tool in ensuring the security of the DoD’s systems and networks. By requiring
-    contractors and vendors to implement appropriate levels of cybersecurity, the DoD is better able to protect its data
-    from malicious actors. As the threat landscape continues to evolve, the CMMC framework will remain an important part
-    of the DoD’s cybersecurity strategy.
+    A estrutura CMMC é uma ferramenta importante para garantir a segurança dos sistemas e redes do DoD. Ao exigir
+    contratantes e fornecedores implementem níveis apropriados de segurança cibernética, o DoD está mais apto a proteger seus dados
+    de atores maliciosos. À medida que o cenário de ameaças continua a evoluir, a estrutura CMMC continuará a ser uma parte importante
+    da estratégia de segurança cibernética do DoD.
   </p>
-  <h2 class="my-4 text-xl font-semibold">Vendor Recommendations</h2>
+  <h2 class="my-4 text-xl font-semibold">Recomendações dos Fornecedores</h2>
   <p class="mb-2">
-    Coming Soon!
+    Em Breve!
   </p>
 </div>
