--- a/app/files/about_frameworks/hipaa.html
+++ b/app/files/about_frameworks/hipaa.html
@@ -1,38 +1,38 @@
 <div class="p-4 text-sm">
-  <h2 class="my-4 text-xl font-semibold">About HIPAA</h2>
+  <h2 class="my-4 text-xl font-semibold">Sobre o HIPAA</h2>
 
   <p class="mb-2">
-    The Health Insurance Portability and Accountability Act (HIPAA) security framework is an important set of guidelines
-    for ensuring the privacy and security of protected health information (PHI). HIPAA was enacted in 1996 and was
-    designed to protect the privacy of individuals’ health information, as well as promoting the safe and secure
-    handling of such information.
+    A estrutura de segurança da Lei de Portabilidade e Responsabilidade de Seguros de Saúde (HIPAA) é um importante conjunto de diretrizes
+    para garantir a privacidade e a segurança das informações de saúde protegidas (PHI). A HIPAA foi promulgada em 1996 e foi
+    projetado para proteger a privacidade das informações de saúde dos indivíduos, bem como promover a segurança e proteção
+    tratamento de tais informações.
   </p>
   <p class="mb-2">
-    The HIPAA security framework is composed of two parts: the Security Rule and the Privacy Rule. The Security Rule
-    requires organizations to implement safeguards to protect the confidentiality, integrity, and availability of PHI.
-    It requires that organizations implement technical, physical, and administrative security measures to ensure the
-    security of PHI. These measures include:
+    A estrutura de segurança da HIPAA é composta por duas partes: a Regra de Segurança e a Regra de Privacidade. A regra de segurança
+    exige que as organizações implementem salvaguardas para proteger a confidencialidade, integridade e disponibilidade de PHI.
+    Requer que as organizações implementem medidas de segurança técnicas, físicas e administrativas para garantir a
+    segurança das PHI. Essas medidas incluem:
   <ul class="list-disc px-8 mb-4">
-    <li>Encryption of PHI stored on computers and mobile devices</li>
-    <li>Limiting access to PHI to authorized personnel only</li>
-    <li>Implementing access control measures to prevent unauthorized access to PHI</li>
-    <li>Auditing access to PHI on a regular basis</li>
+    <li>Criptografia de PHI armazenadas em computadores e dispositivos móveis</li>
+    <li>Limitar o acesso às PHI apenas a pessoal autorizado</li>
+    <li>Implementação de medidas de controle de acesso para evitar acesso não autorizado a PHI</li>
+    <li>Auditar regularmente o acesso às PHI</li>
 
 
   </ul>
   </p>
   <p class="mb-2">
-    In addition to the security measures, the Privacy Rule mandates that organizations must obtain written authorization
-    from patients before they can use or disclose their PHI. The Privacy Rule also outlines the rights of individuals to
-    access, inspect, and amend their PHI.
+    Além das medidas de segurança, a Regra de Privacidade exige que as organizações obtenham autorização por escrito
+    dos pacientes antes que eles possam usar ou divulgar suas PHI. A Regra de Privacidade também descreve os direitos dos indivíduos de
+    acessar, inspecionar e alterar suas PHI.
   </p>
   <p class="mb-2">
-    The HIPAA security framework is an important set of guidelines for organizations that handle PHI. By following these
-    guidelines, organizations can ensure the safe and secure handling of PHI and protect the privacy of individuals.
+    A estrutura de segurança HIPAA é um conjunto importante de diretrizes para organizações que lidam com PHI. Seguindo estes
+    diretrizes, as organizações podem garantir o manuseio seguro de PHI e proteger a privacidade dos indivíduos.
   </p>
 
-  <h2 class="my-4 text-xl font-semibold">Vendor Recommendations</h2>
+  <h2 class="my-4 text-xl font-semibold">Recomendações dos Fornecedores</h2>
   <p class="mb-2">
-    Coming Soon!
+    Em Breve!
   </p>
 </div>
