--- a/app/files/about_frameworks/nist_800_53_v4.html
+++ b/app/files/about_frameworks/nist_800_53_v4.html
@@ -1,59 +1,59 @@
 <div class="p-4 text-sm">
-  <h2 class="my-4 text-xl font-semibold">About NIST 800-53</h2>
+  <h2 class="my-4 text-xl font-semibold">Sobre o NIST 800-53</h2>
 
   <p class="mb-2">
-    Introduction
+    Introdução
 
-    The National Institute of Standards and Technology (NIST) 800-53 is a security framework that is used to protect
-    federal information systems and the data they process. This framework provides organizations with a comprehensive
-    set of security controls and processes to ensure the confidentiality, integrity, and availability of their systems.
-    The framework also outlines the necessary steps to assess and manage risk, as well as the necessary measures to
-    prevent, detect, and respond to security incidents.
+    O Instituto Nacional de Padrões e Tecnologia (NIST) 800-53 é uma estrutura de segurança usada para proteger
+    sistemas de informação federais e os dados que eles processam. Esta estrutura fornece às organizações uma visão abrangente
+    conjunto de controles e processos de segurança para garantir a confidencialidade, integridade e disponibilidade de seus sistemas.
+    O quadro também descreve as etapas necessárias para avaliar e gerir o risco, bem como as medidas necessárias para
+    prevenir, detectar e responder a incidentes de segurança.
 
   </p>
   <p class="mb-2">
 
-    The NIST 800-53 security framework is based on the Risk Management Framework (RMF) and is designed to protect
-    federal information systems and the data they process. The framework outlines the necessary steps to assess and
-    manage risk, as well as the necessary measures to prevent, detect, and respond to security incidents. The framework
-    is composed of three primary parts: the security control catalog, the security assessment process, and the security
-    authorization process.
+    A estrutura de segurança NIST 800-53 é baseada na Estrutura de Gerenciamento de Risco (RMF) e foi projetada para proteger
+    sistemas de informação federais e os dados que eles processam. A estrutura descreve as etapas necessárias para avaliar e
+    gerenciar riscos, bem como as medidas necessárias para prevenir, detectar e responder a incidentes de segurança. O quadro
+    é composto de três partes principais: o catálogo de controle de segurança, o processo de avaliação de segurança e o
+    processo de autorização.
 
   </p>
   <p class="mb-2">
 
-    The security control catalog is a set of security controls that are used to protect federal information systems and
-    the data they process. The security control catalog consists of 18 families of controls that are organized into
-    three categories: basic, derived, and hybrid. Within each family, there are multiple security controls that must be
-    implemented to adequately protect the system.
+    O catálogo de controle de segurança é um conjunto de controles de segurança usados ​​para proteger sistemas de informação federais e
+    os dados que eles processam. O catálogo de controles de segurança consiste em 18 famílias de controles organizados em
+    três categorias: básico, derivado e híbrido. Dentro de cada família, existem vários controles de segurança que devem ser
+    implementadas para proteger adequadamente o sistema.
 
   </p>
   <p class="mb-2">
 
-    The security assessment process is a process that is used to assess the security of a federal information system.
-    This process involves assessing the system’s security controls to identify any potential vulnerabilities, and then
-    recommending corrective actions to address any identified vulnerabilities. The security assessment process is an
-    iterative process that is conducted throughout the life cycle of the system.
+    O processo de avaliação de segurança é um processo usado para avaliar a segurança de um sistema de informação federal.
+    Este processo envolve avaliar os controles de segurança do sistema para identificar quaisquer vulnerabilidades potenciais e, em seguida,
+    recomendar ações corretivas para resolver quaisquer vulnerabilidades identificadas. O processo de avaliação de segurança é um
+    processo iterativo que é conduzido ao longo do ciclo de vida do sistema.
 
   </p>
   <p class="mb-2">
 
-    The security authorization process is a process that is used to authorize the operation of a federal information
-    system. This process involves assessing the system’s security controls to ensure that they are properly implemented
-    and that the system meets all of the applicable security requirements. The security authorization process also
-    involves documenting the findings of the security assessment and issuing a security authorization decision.
+    O processo de autorização de segurança é um processo usado para autorizar a operação de uma informação federal
+    sistema. Este processo envolve a avaliação dos controles de segurança do sistema para garantir que eles sejam implementados adequadamente
+    e que o sistema atenda a todos os requisitos de segurança aplicáveis. O processo de autorização de segurança também
+    envolve documentar as conclusões da avaliação de segurança e emitir uma decisão de autorização de segurança.
 
   </p>
   <p class="mb-2">
 
-    The NIST 800-53 security framework is an important tool for protecting federal information systems and the data they
-    process. The framework provides organizations with a comprehensive set of security controls and processes to ensure
-    the confidentiality, integrity, and availability of their systems. The framework also outlines the necessary steps
-    to assess and manage risk, as well as the necessary measures to prevent, detect, and respond to security incidents.
+    A estrutura de segurança NIST 800-53 é uma ferramenta importante para proteger os sistemas de informação federais e os dados que eles
+    processo. A estrutura fornece às organizações um conjunto abrangente de controles e processos de segurança para garantir
+    a confidencialidade, integridade e disponibilidade de seus sistemas. A estrutura também descreve as etapas necessárias
+    avaliar e gerenciar riscos, bem como as medidas necessárias para prevenir, detectar e responder a incidentes de segurança.
   </p>
 
-  <h2 class="my-4 text-xl font-semibold">Vendor Recommendations</h2>
+  <h2 class="my-4 text-xl font-semibold">Recomendações dos Fornecedores</h2>
   <p class="mb-2">
-    Coming Soon!
+    Em Breve!
   </p>
 </div>
