--- a/app/files/about_frameworks/nist_csf_v1.1.html
+++ b/app/files/about_frameworks/nist_csf_v1.1.html
@@ -1,38 +1,38 @@
 <div class="p-4 text-sm">
-  <h2 class="my-4 text-xl font-semibold">About NIST CSF</h2>
+  <h2 class="my-4 text-xl font-semibold">Sobre o NIST CSF</h2>
 
   <p class="mb-2">
-    The National Institute of Standards and Technology (NIST) Cybersecurity Framework (CSF) is a voluntary framework
-    designed to help organizations protect their information systems from cyber attacks. The framework provides a
-    comprehensive set of guidelines and best practices that organizations can use to manage their cybersecurity program.
-    It was developed in response to the growing number of cyber threats and the need for organizations to be better
-    prepared and more resilient.
+    A Estrutura de Segurança Cibernética (CSF) do Instituto Nacional de Padrões e Tecnologia (NIST) é uma estrutura voluntária
+    projetado para ajudar as organizações a proteger seus sistemas de informação contra ataques cibernéticos. O quadro fornece uma
+    conjunto abrangente de diretrizes e práticas recomendadas que as organizações podem usar para gerenciar seu programa de segurança cibernética.
+    Foi desenvolvido em resposta ao crescente número de ameaças cibernéticas e à necessidade das organizações serem melhores
+    preparado e mais resiliente.
   </p>
   <p class="mb-2">
 
-    The framework provides organizations with a structure for assessing their cybersecurity risk and identifying areas
-    for improvement. It includes five core components: Identify, Protect, Detect, Respond, and Recover. Each component
-    covers a range of activities and objectives that organizations need to consider in order to effectively manage their
-    cybersecurity program.
+    A estrutura fornece às organizações uma estrutura para avaliar o risco de segurança cibernética e identificar áreas
+    para melhoria. Inclui cinco componentes principais: Identificar, Proteger, Detectar, Responder e Recuperar. Cada componente
+    abrange uma série de atividades e objetivos que as organizações precisam considerar para gerenciar eficazmente seus
+    programa de segurança cibernética.
   </p>
   <p class="mb-2">
 
-    The Identify component helps organizations understand the scope and nature of their information systems and the
-    associated risks. The Protect component focuses on security controls, policies, and procedures that should be
-    implemented to reduce risk. The Detect component focuses on monitoring the environment and detecting any potential
-    threats. The Respond component focuses on identifying the appropriate response to a threat and responding
-    accordingly. Finally, the Recover component focuses on restoring systems and data to an acceptable state.
+    O componente Identificar ajuda as organizações a compreender o escopo e a natureza de seus sistemas de informação e o
+    riscos associados. O componente Protect concentra-se em controles, políticas e procedimentos de segurança que devem ser
+    implementadas para reduzir o risco. O componente Detect concentra-se no monitoramento do ambiente e na detecção de qualquer potencial
+    ameaças. O componente Responder concentra-se na identificação da resposta apropriada a uma ameaça e na resposta
+    de acordo. Finalmente, o componente Recuperar concentra-se na restauração de sistemas e dados para um estado aceitável.
   </p>
   <p class="mb-2">
 
-    The NIST CSF is a valuable tool for organizations to use in order to manage their cybersecurity programs. It
-    provides a comprehensive set of guidelines and best practices that can be used to assess, monitor, and respond to
-    cyber threats. Additionally, it provides a framework for organizations to use in order to determine which security
-    controls and processes should be implemented in order to ensure the security of their information systems.
+    O NIST CSF é uma ferramenta valiosa para as organizações usarem para gerenciar seus programas de segurança cibernética. Isto
+    fornece um conjunto abrangente de diretrizes e melhores práticas que podem ser usadas para avaliar, monitorar e responder a
+    ameaças cibernéticas. Além disso, fornece uma estrutura para as organizações usarem para determinar quais
+    controles e processos devem ser implementados para garantir a segurança de seus sistemas de informação.
   </p>
 
-  <h2 class="my-4 text-xl font-semibold">Vendor Recommendations</h2>
+  <h2 class="my-4 text-xl font-semibold">Recomendações dos Fornecedores</h2>
   <p class="mb-2">
-    Coming Soon!
+    Em Breve!
   </p>
 </div>
