--- a/app/files/about_frameworks/pci_3.1.html
+++ b/app/files/about_frameworks/pci_3.1.html
@@ -1,19 +1,19 @@
 <div class="p-4 text-sm">
-  <h2 class="my-4 text-xl font-semibold">About PCI DSS</h2>
+  <h2 class="my-4 text-xl font-semibold">Sobre o PCI DSS</h2>
 
   <p class="mb-2">
-    The PCI DSS framework is a set of rules and regulations created by the Payment Card Industry Security Standards
-    Council (PCI SSC). It applies to any organization that processes, stores, or transmits credit card data, and is
-    intended to help ensure the security of such data. The PCI DSS is composed of 12 requirements that cover topics such
-    as encryption, access control, and logging and monitoring. The requirements are organized into six categories,
-    including security management, access control, encryption, and incident response. The PCI DSS framework helps
-    organizations identify and address potential security risks, and is an essential component of any organization’s
-    security posture.
+    A estrutura PCI DSS é um conjunto de regras e regulamentos criados pelos Padrões de Segurança da Indústria de Cartões de Pagamento.
+    Conselho (PCI SSC). Aplica-se a qualquer organização que processe, armazene ou transmita dados de cartão de crédito e é
+    destina-se a ajudar a garantir a segurança de tais dados. O PCI DSS é composto por 12 requisitos que abrangem tópicos como
+    como criptografia, controle de acesso e registro e monitoramento. Os requisitos são organizados em seis categorias,
+    incluindo gerenciamento de segurança, controle de acesso, criptografia e resposta a incidentes. A estrutura PCI DSS ajuda
+    organizações identificam e abordam possíveis riscos de segurança e é um componente essencial do trabalho de qualquer organização.
+    postura de segurança.
   </p>
   <p class="mb-2">
 
-  <h2 class="my-4 text-xl font-semibold">Vendor Recommendations</h2>
+  <h2 class="my-4 text-xl font-semibold">Recomendações dos Fornecedores</h2>
   <p class="mb-2">
-    Coming Soon!
+    Em Breve!
   </p>
 </div>
