--- a/app/files/about_frameworks/soc2.html
+++ b/app/files/about_frameworks/soc2.html
@@ -1,54 +1,54 @@
 <div class="p-4 text-sm">
-  <h2 class="my-4 text-xl font-semibold">About SOC2</h2>
+  <h2 class="my-4 text-xl font-semibold">Sobre o SOC2</h2>
 
   <p class="mb-2">
-    The SOC2 framework is a set of security and privacy standards designed to ensure that organizations have secure and
-    reliable systems. These standards are designed to help organizations protect their data and the data of their
-    customers. They are also used to ensure that organizations are compliant with applicable regulations.
+    A estrutura SOC2 é um conjunto de padrões de segurança e privacidade projetados para garantir que as organizações tenham acesso seguro e
+    sistemas confiáveis. Esses padrões são projetados para ajudar as organizações a proteger seus dados e os dados de seus
+    clientes. Eles também são usados ​​para garantir que as organizações estejam em conformidade com os regulamentos aplicáveis.
   </p>
   <p class="mb-2">
 
-    The framework consists of five trust service principles: security, availability, processing integrity,
-    confidentiality, and privacy. The SOC2 framework is designed to ensure that organizations have policies, procedures,
-    and controls in place to protect the data they collect and store. It also helps organizations monitor their systems
-    and identify potential risks.
+    A estrutura consiste em cinco princípios de serviço de confiança: segurança, disponibilidade, integridade de processamento,
+    confidencialidade e privacidade. A estrutura SOC2 foi projetada para garantir que as organizações tenham políticas, procedimentos,
+    e controles implementados para proteger os dados que coletam e armazenam. Também ajuda as organizações a monitorar seus sistemas
+    e identificar riscos potenciais.
   </p>
   <p class="mb-2">
 
-    Organizations can use the SOC2 framework to assess their systems and identify gaps in their security and privacy
-    practices. It also provides guidance on how to implement the necessary controls to mitigate those risks.
+    As organizações podem usar a estrutura SOC2 para avaliar seus sistemas e identificar lacunas em sua segurança e privacidade
+    práticas. Também fornece orientações sobre como implementar os controles necessários para mitigar esses riscos.
   </p>
   <p class="mb-2">
 
-    When organizations are certified to the SOC2 standards, they are able to demonstrate to customers and other
-    stakeholders that they have taken the necessary steps to protect their data and systems. This can help organizations
-    build trust and credibility with their customers and other stakeholders.
+    Quando as organizações são certificadas nos padrões SOC2, elas são capazes de demonstrar aos clientes e outros
+    partes interessadas que tomaram as medidas necessárias para proteger os seus dados e sistemas. Isso pode ajudar as organizações
+    construir confiança e credibilidade com seus clientes e outras partes interessadas.
   </p>
   <p class="mb-2">
 
-    The SOC2 framework is also helpful for organizations that are seeking to comply with regulatory requirements. Many
-    regulators have adopted the SOC2 standards, and organizations that have been certified to the framework can
-    demonstrate to regulators that they have taken the necessary steps to protect their data and systems.
+    A estrutura SOC2 também é útil para organizações que procuram cumprir os requisitos regulamentares. Muitos
+    reguladores adotaram os padrões SOC2, e as organizações que foram certificadas pela estrutura podem
+    demonstrar aos reguladores que tomaram as medidas necessárias para proteger os seus dados e sistemas.
   </p>
   <p class="mb-2">
 
-    The SOC2 framework is a valuable tool for organizations that want to ensure that their systems and data are secure
-    and reliable. It provides guidance on how to implement appropriate security and privacy controls, and it can help
-    organizations demonstrate to customers and other stakeholders that they are taking the necessary steps to protect
-    their data.
+    A estrutura SOC2 é uma ferramenta valiosa para organizações que desejam garantir que seus sistemas e dados estejam seguros
+    e confiável. Ele fornece orientação sobre como implementar controles apropriados de segurança e privacidade e pode ajudar
+    organizações demonstram aos clientes e outras partes interessadas que estão tomando as medidas necessárias para proteger
+    seus dados.
   </p>
   <p class="mb-2">
-    SOC 2 Type 1 reports are focused on the design of the system and provide assurance that the system is designed to
-    meet the criteria of the applicable trust services criteria. Type 1 reports are usually performed at a specific
-    point in time.
+    Os relatórios SOC2 Tipo 1 concentram-se no design do sistema e fornecem garantia de que o sistema foi projetado para
+    atender aos critérios dos critérios de serviços de confiança aplicáveis. Os relatórios do tipo 1 geralmente são realizados em um horário específico
+    ponto no tempo.
 
-    SOC 2 Type 2 reports are focused on the operating effectiveness of the system over a period of time and provide
-    assurance that the system is operating in accordance with the criteria of the applicable trust services criteria.
-    Type 2 reports are usually performed over a period of at least six months.
+    Os relatórios SOC2 Tipo 2 concentram-se na eficácia operacional do sistema durante um período de tempo e fornecem
+    garantia de que o sistema está operando de acordo com os critérios dos serviços de confiança aplicáveis.
+    Os relatórios do tipo 2 são geralmente realizados durante um período de pelo menos seis meses.
   </p>
 
-  <h2 class="my-4 text-xl font-semibold">Vendor Recommendations</h2>
+  <h2 class="my-4 text-xl font-semibold">Recomendações dos Fornecedores</h2>
   <p class="mb-2">
-    Coming Soon!
+    Em Breve!
   </p>
 </div>
