--- a/app/files/about_frameworks/ssf.html
+++ b/app/files/about_frameworks/ssf.html
@@ -1,20 +1,20 @@
 <div class="p-4 text-sm">
-  <h2 class="my-4 text-xl font-semibold">About SSF</h2>
+  <h2 class="my-4 text-xl font-semibold">Sobre o SSF</h2>
 
   <p class="mb-2">
-    The SSF (Startup Security) framework is a set of security controls designed for startups to quickly and effectively
-    set up their environment. The controls are rather opinionated and will suggest specific tooling. The tooling and
-    environment recommendations are not required, but the standard is designed to reduce the amount of decisions that a
-    startup must make. The controls are also roughly in order and it is recommended to start with control 1 (e.g. ssf1)
-    and go down the list. The order is not mandatory but it makes the most sense for dependencies. There are a total of
-    20 controls in the framework and if all 20 controls are completed, your security risk will be greatly reduced. The
-    SSF framework also works nicely with other large name frameworks such as CSC, NIST, CMMC (in other words, there is
-    nothing in SSF that would be frowned upon in other frameworks).
+    A estrutura SSF (Startup Security) é um conjunto de controles de segurança projetados para que startups possam de forma rápida e eficaz
+    configurar seu ambiente. Os controles são bastante opinativos e sugerem ferramentas específicas. As ferramentas e
+    recomendações ambientais não são necessárias, mas o padrão foi projetado para reduzir a quantidade de decisões que um
+    a startup deve fazer. Os controles também estão aproximadamente em ordem e é recomendado começar com o controle 1 (por exemplo, ssf1)
+    e desça a lista. A ordem não é obrigatória, mas faz mais sentido para dependências. Há um total de
+    20 controles na estrutura e se todos os 20 controles forem concluídos, seu risco de segurança será bastante reduzido. O
+    A estrutura SSF também funciona bem com outras estruturas de grandes nomes, como CSC, NIST, CMMC (em outras palavras, há
+    nada na SSF que possa ser desaprovado noutros enquadramentos).
   </p>
   <p class="mb-2">
 
-  <h2 class="my-4 text-xl font-semibold">Vendor Recommendations</h2>
+  <h2 class="my-4 text-xl font-semibold">Recomendações dos Fornecedores</h2>
   <p class="mb-2">
-    Coming Soon!
+    Em Breve!
   </p>
 </div>
