--- a/app/files/base_policies/Access.html
+++ b/app/files/base_policies/Access.html
@@ -1,46 +1,49 @@
-<h2>Purpose and Scope</h2>
+<h2>Objetivo e Escopo</h2>
 <ul>
-    <li>The purpose of this policy is to define procedures to onboard and offboard users to technical infrastructure in
-        a manner that minimizes the risk of information loss or exposure.</li>
-    <li>This policy applies to all technical infrastructure within the organization.</li>
-    <li>This policy applies to all full-time and part-time employees and contractors.</li>
+    <li>O objetivo desta política é definir procedimentos para embarcar e desligar usuários da infraestrutura técnica em
+        uma maneira que minimize o risco de perda ou exposição de informações.</li>
+    <li>Esta política se aplica a toda a infraestrutura técnica da organização.</li>
+    <li>Esta política se aplica a todos os funcionários e contratados em tempo integral e parcial.</li>
 </ul>
-<h2>Background</h2>
+<h2>Plano de fundo</h2>
 <ul>
-    <li>In order to minimize the risk of information loss or exposure (from both inside and outside the organization),
-        the organization is reliant on the principle of least privilege. Account creation and permission levels are
-        restricted to only the resources absolutely needed to perform each person&rsquo;s job duties. When a
-        user&rsquo;s role within the organization changes, those accounts and permission levels are changed/revoked to
-        fit the new role and disabled when the user leaves the organization altogether.</li>
+    <li>Para minimizar o risco de perda ou exposição de informações (tanto de dentro como de fora da organização),
+        a organização depende do princípio do menor privilégio. A criação de conta e os níveis de permissão são
+        restrito apenas aos recursos absolutamente necessários para desempenhar as funções de trabalho de cada
+        pessoa&rsquo;. Quando um
+        a função do usuário&rsquo; dentro da organização muda, essas contas e níveis de permissão são
+        alterados/revogados para
+        se adequar à nova função e ser desativado quando o usuário sair da organização.</li>
 </ul>
-<h2>Policy</h2>
+<h2>Política</h2>
 <ul>
-    <li>During onboarding
+    <li>Durante a integração
         <ul>
-            <li>Hiring Manager informs HR upon hire of a new employee.</li>
-            <li>HR emails IT to inform them of a new hire and their role.</li>
-            <li>IT creates a checklist of accounts and permission levels needed for that role.</li>
-            <li>The owner of each resource reviews and approves account creation and the<br>associated permissions.</li>
-            <li>IT works with the owner of each resource to set up the user.</li>
+            <li>O gerente de contratação informa o RH sobre a contratação de um novo funcionário.</li>
+            <li>O RH envia um e-mail para a TI para informá-los sobre uma nova contratação e sua função.</li>
+            <li>A TI cria uma lista de verificação de contas e níveis de permissão necessários para essa função.</li>
+            <li>O proprietário de cada recurso analisa e aprova a criação da conta e as<br>permissões associadas.</li>
+            <li>A TI trabalha com o proprietário de cada recurso para configurar o usuário.</li>
         </ul>
     </li>
-    <li>During offboarding:
+    <li>Durante a saída:
         <ul>
-            <li>Hiring Manager notifies HR when an employee has been terminated.</li>
-            <li>HR sends a weekly email report to IT summarizing list of users terminated and instructs IT to disable
-                their access.</li>
-            <li>IT terminates access within five business days from receipt of notification.</li>
+            <li>O gerente de contratação notifica o RH quando um funcionário é demitido.</li>
+            <li>O RH envia um relatório semanal por e-mail para a TI resumindo a lista de usuários demitidos e instrui a
+                TI a desativar
+                seu acesso.</li>
+            <li>A TI encerra o acesso dentro de cinco dias úteis a partir do recebimento da notificação.</li>
         </ul>
     </li>
-    <li>When an employee changes roles within the organization:
+    <li>Quando um funcionário muda de função na organização:
         <ul>
-            <li>Hiring Manager will inform HR of a change in role.</li>
-            <li>HR and IT will follow the same steps as outlined in the onboarding and offboarding procedures.</li>
+            <li>O gerente de contratação informará o RH sobre uma mudança de função.</li>
+            <li>O RH e a TI seguirão as mesmas etapas descritas nos procedimentos de integração e desligamento.</li>
         </ul>
     </li>
-    <li>Review of accounts and permissions:
+    <li>Revisão de contas e permissões:
         <ul>
-            <li>Each month, IT and HR will review accounts and permission levels for accuracy.</li>
+            <li>A cada mês, a TI e o RH analisarão a precisão das contas e dos níveis de permissão.</li>
         </ul>
     </li>
 </ul>
