--- a/app/files/base_policies/Conduct.html
+++ b/app/files/base_policies/Conduct.html
@@ -1,100 +1,112 @@
-<h2>Purpose and Scope</h2>
+<h2>Finalidade e âmbito</h2>
 <ol>
-    <li>&nbsp; The purpose of this policy is to define expected behavior from employees towards their colleagues,
-        supervisors, and the overall organization.</li>
-    <li>&nbsp; We expect all employees to follow our Code of Conduct. Offensive behavior, disruptive behavior, and
-        participation in serious disputes should be avoided. Employees are expected to foster a respectful and
-        collaborative environment.</li>
-    <li>&nbsp; This policy applies to all employees and contractors. They are bound by their Employment Offer Letter or
-        Independent Contractor Agreement to follow the Code of Conduct Policy while performing their duties. The Code of
-        Conduct is outlined below:</li>
+    <li>  O objetivo desta política é definir o comportamento esperado dos funcionários em relação aos colegas,
+        supervisores e a organização em geral.</li>
+    <li>  Esperamos que todos os funcionários sigam nosso Código de Conduta. Comportamento ofensivo, comportamento
+        perturbador e
+        a participação em disputas sérias deve ser evitada. Espera-se que os funcionários promovam uma atitude
+        respeitosa e
+        ambiente colaborativo.</li>
+    <li>  Esta política se aplica a todos os funcionários e prestadores de serviços. Eles estão vinculados à sua Carta
+        de Oferta de Emprego ou
+        Acordo de Contratante Independente para seguir a Política do Código de Conduta no desempenho de suas funções. O
+        Código de conduta está descrita abaixo:</li>
 </ol>
-<h2>Policy</h2>
-<p>Compliance with law</p>
+<h2>Política</h2>
+<p>Conformidade com a lei</p>
 <ul>
-    <li>Employees should have an understanding of and comply with all environmental, safety, and fair dealing laws. When
-        performing their job duty and dealing with the company&rsquo;s products, finances, critical information, &amp;
-        public image, employees are expected to be ethical and responsible. If an employee is unsure of whether a
-        contemplated action is permitted by law or Company policy, they should seek advice from the resource manager.
-    </li>
+    <li>Os funcionários devem entender e cumprir todas as leis ambientais, de segurança e negociação justa.Quando
+        executando seu dever de trabalho e lidando com os produtos, finanças, informações críticas da empresa, e
+        Imagem pública, espera -se que os funcionários sejam éticos e responsáveis.Se um funcionário não tiver certeza
+        de se um
+        A ação contemplada é permitida por lei ou política da empresa, eles devem procurar aconselhamento do gerente de
+        recursos.</li>
 </ul>
-<p>Respect in the workplace</p>
+<p>Respeito no local de trabalho</p>
 <ul>
-    <li>Employees should respect their colleagues. Discriminatory behavior, harassment, or victimization will not be
-        tolerated.</li>
+    <li>Os funcionários devem respeitar seus colegas.Comportamento discriminatório, assédio ou vitimização não será
+        tolerado.</li>
 </ul>
-<p>Protection of company property</p>
+<p>Proteção da propriedade da empresa</p>
 <ul>
-    <li>Company property, both material or intangible, should be treated with respect and care. Employees and
-        contractors:
+    <li>A propriedade da empresa, tanto material quanto intangível, deve ser tratada com respeito e cuidado.
+        Funcionários e
+        empreiteiros:
         <ul>
-            <li>Should not misuse company equipment</li>
-            <li>Should respect all intangible property, including trademarks, copyright, information, reports, and other
-                property. These materials should be used only to complete job duties.</li>
-            <li>Should protect company facilities and other material property from damage and vandalism, whenever
-                possible.</li>
+            <li>Não deve usar mal o equipamento da empresa</li>
+            <li>Deve respeitar toda a propriedade intangível, incluindo marcas comerciais, direitos autorais,
+                informações, relatórios e outros
+                propriedade.Esses materiais devem ser usados ​​apenas para concluir as tarefas do trabalho.</li>
+            <li>Deve proteger as instalações da empresa e outras propriedades materiais contra danos e vandalismo,
+                sempre que
+                possível.</li>
         </ul>
     </li>
 </ul>
-<p>Personal appearance</p>
+<p>Aparência pessoal</p>
 <ul>
-    <li>When in the workplace, employees must present themselves in an appropriate &amp; professional manner. They
-        should abide by the company dress code.</li>
+    <li>Quando no local de trabalho, os funcionários devem se apresentar de maneira apropriada e profissional.Eles devem
+        cumprir o código de vestimenta da empresa.</li>
 </ul>
-<p>Corruption</p>
+<p>Corrupção</p>
 <ul>
-    <li>Employees are discouraged from accepting gifts from clients or partners. Briberies are prohibited for the
-        benefit of any external or internal party.</li>
+    <li>Os funcionários são desencorajados a aceitar presentes de clientes ou parceiros.São proibidos de submetimentos
+        para o
+        benefício de qualquer parte externa ou interna.</li>
 </ul>
-<p>Job duties and authority</p>
+<p>Tarefas e autoridade do trabalho</p>
 <ul>
-    <li>Employees should fulfill their job duties with integrity and respect towards all individuals involved.</li>
-    <li>Supervisors and managers may not use abuse their authority. Competency and workload should be taken into account
-        when delegating duties to team members.</li>
-    <li>Team members are expected to follow their leaders&rsquo; instructions and complete their duties with
-        thoughtfulness and in a timely manner.</li>
+    <li>Os funcionários devem cumprir suas tarefas com integridade e respeito a todos os indivíduos envolvidos.</li>
+    <li>Supervisores e gerentes não podem usar abuso sua autoridade.Competência e carga de trabalho devem ser levadas em
+        consideração
+        Ao delegar tarefas aos membros da equipe.</li>
+    <li>Espera -se que os membros da equipe sigam as instruções de seus líderes e concluam suas funções com
+        consideração e em tempo hábil.</li>
 </ul>
-<p>Absenteeism and tardiness</p>
+<p>Absenteísmo e atraso</p>
 <ul>
-    <li>Employees should be punctual when coming to and leaving from work and follow the schedule determined by their
-        hiring manager. Exceptions can be made for occasions that prevent employees from following standard working
-        hours or days, with approval from their hiring manager.</li>
+    <li>Os funcionários devem ser pontuais ao chegar e sair do trabalho e seguir o cronograma determinado por seus
+        gerente de contratação.Exceções podem ser feitas para ocasiões que impedem os funcionários de seguir o trabalho
+        padrão
+        Horas ou dias, com a aprovação de seu gerente de contratação.</li>
 </ul>
-<p>Conflict of interest</p>
+<p>Conflito de interesses</p>
 <ul>
-    <li>Employees should avoid any personal, financial, or other interests that might compete with their job duties.
-    </li>
+    <li>Os funcionários devem evitar quaisquer interesses pessoais, financeiros ou outros que possam competir com suas
+        tarefas de trabalho.</li>
 </ul>
-<p>Collaboration</p>
+<p>Colaboração</p>
 <ul>
-    <li>Employees should be friendly with their colleagues and open to collaboration. They should not disrupt the
-        workplace or present obstacles to their colleagues&rsquo; work.</li>
+    <li>Os funcionários devem ser amigáveis ​​com seus colegas e abertos à colaboração.Eles não devem atrapalhar o
+        local de trabalho ou presentes obstáculos ao trabalho de seus colegas.</li>
 </ul>
-<p><br>Communication</p>
+<p><br />Comunicação</p>
 <ul>
-    <li>Colleagues, supervisors, or team members must be open to communication amongst each other.</li>
+    <li>Colegas, supervisores ou membros da equipe devem estar abertos à comunicação entre si.</li>
 </ul>
-<p>Benefits</p>
+<p>Benefícios</p>
 <ul>
-    <li>We expect employees to not abuse their employment benefits. This can refer to time off, insurance, facilities,
-        subscriptions, or other benefits our company offers. Refer to Human Resources for more information on benefits.
-    </li>
+    <li>Esperamos que os funcionários não abusem de seus benefícios de emprego.Isso pode se referir a tempo de folga,
+        seguro, instalações,
+        assinaturas ou outros benefícios que nossa empresa oferece.Consulte os recursos humanos para obter mais
+        informações sobre benefícios.</li>
 </ul>
-<p>Policies</p>
+<p>Pólices</p>
 <ul>
-    <li>All employees must comply with company policies. Questions should be directed to their hiring managers and/or
-        Human Resources.</li>
+    <li>Todos os funcionários devem cumprir as políticas da empresa.As perguntas devem ser direcionadas para seus
+        gerentes de contratação e/ou
+        Recursos Humanos.</li>
 </ul>
-<p>Disciplinary actions</p>
+<p>Ações disciplinares</p>
 <ul>
-    <li>Repeated or intentional violation of the Code of Conduct Policy will be met with disciplinary action.
-        Consequences will vary depending on the violation, but can include:
+    <li>A violação repetida ou intencional da Política do Código de Conduta implicará ação disciplinar.
+        As consequências variarão dependendo da violação, mas podem incluir:
         <ul>
-            <li>demotion</li>
-            <li>reprimand</li>
-            <li>suspension or &nbsp;termination</li>
-            <li>detraction of benefits for a definite or indefinite time</li>
+            <li>rebaixamento</li>
+            <li>reprimenda</li>
+            <li>suspensão ou rescisão</li>
+            <li>Detrração de benefícios para um tempo definitivo ou indefinido</li>
         </ul>
     </li>
-    <li>Cases of corruption, theft, embezzlement, or other unlawful behavior may call for legal action.</li>
+    <li>Casos de corrupção, roubo, peculato ou outro comportamento ilegal podem exigir ações legais.</li>
 </ul>
