--- a/app/files/base_policies/Confidentiality.html
+++ b/app/files/base_policies/Confidentiality.html
@@ -1,84 +1,90 @@
-<h2>Purpose and Scope</h2>
+<h2>Finalidade e âmbito</h2>
 <ul>
-    <li>This policy outlines expected behavior of employees to keep confidential information about clients, partners,
-        and our company secure.</li>
-    <li>This policy applies to all employees, board members, investors, and contractors, who may have access to
-        confidential information. This policy must be made readily available to all whom it<br>applies to.</li>
+    <li>Esta política descreve o comportamento esperado dos funcionários para manter informações confidenciais sobre
+        clientes, parceiros,
+        e nossa empresa segura.</li>
+    <li>Esta política se aplica a todos os funcionários, membros do conselho, investidores e contratados, que possam ter
+        acesso a
+        informação confidencial. Esta política deve ser disponibilizada prontamente a todos a quem <br> se aplica.</li>
 </ul>
-<h2>Background</h2>
+<h2>Fundo</h2>
 <ul>
-    <li>The company's confidential information must be protected for two reasons:
+    <li>As informações confidenciais da empresa devem ser protegidas por dois motivos:
         <ul>
-            <li>It may be legally binding (i.e. sensitive customer data)</li>
-            <li>It may be fundamental to our business (i.e. business processes)</li>
+            <li>Pode ser legalmente vinculativo (ou seja, dados sensíveis ao cliente)</li>
+            <li>Pode ser fundamental para o nosso negócio (ou seja, processos de negócios)</li>
         </ul>
     </li>
-    <li>Common examples of confidential information in our company includes, but is not limited to:
+    <li>Exemplos comuns de informações confidenciais em nossa empresa incluem, mas não estão limitados a:
         <ul>
-            <li>Unpublished financial information</li>
-            <li>Customer/partner/vendor/external party data</li>
-            <li>Patents, formulas, new technologies, and other intellectual property</li>
-            <li>Existing and prospective customer lists</li>
-            <li>Undisclosed business strategies including pricing &amp; marketing</li>
-            <li>Materials &amp; processes explicitly marked as &ldquo;confidential&rdquo;</li>
+            <li>Informações financeiras não publicadas</li>
+            <li>Dados do cliente/parceiro/fornecedor/parte externa</li>
+            <li>Patentes, fórmulas, novas tecnologias e outras propriedades intelectuais</li>
+            <li>Listas de clientes existentes e em potencial</li>
+            <li>Estratégias de negócios não reveladas, incluindo preços e marketing</li>
+            <li>Materiais e processos explicitamente marcados como "confidenciais"</li>
         </ul>
     </li>
-    <li>Employees will have varying levels of authorized access to confidential information.</li>
+    <li>Os funcionários terão níveis variados de acesso autorizado a informações confidenciais.</li>
 </ul>
-<h2>Policy</h2>
+<h2>Política</h2>
 <ul>
-    <li>Employee procedure for handling confidential information
+    <li>Procedimento do funcionário para lidar com informações confidenciais
         <ul>
-            <li>Lock and secure confidential information at all times</li>
-            <li>Safely dispose (i.e. shred) documents when no longer needed</li>
-            <li>View confidential information only on secure devices</li>
-            <li>Disclose information only when authorized and necessary</li>
-            <li>Do not use confidential information for personal gain, benefit, or profit</li>
-            <li>Do not disclose confidential information to anyone outside the company or to anyone within the company
-                who does not have appropriate privileges</li>
-            <li>Do not store confidential information or replicates of confidential information in unsecured manners
-                (i.e. on unsecured devices)</li>
-            <li>Do not remove confidential documents from company's premises unless absolutely necessary to move</li>
+            <li>Bloquear e proteger informações confidenciais o tempo todo</li>
+            <li>Disponha documentos com segurança (ou seja, Shred) quando não é mais necessário</li>
+            <li>Veja informações confidenciais apenas em dispositivos seguros</li>
+            <li>Divulgar informações somente quando autorizado e necessário</li>
+            <li>Não use informações confidenciais para ganho, benefício ou lucro pessoal</li>
+            <li>Não divulgue informações confidenciais a ninguém fora da empresa ou a qualquer pessoa da empresa
+                quem não tem privilégios apropriados</li>
+            <li>Não armazene informações confidenciais ou replica de informações confidenciais de maneiras não seguras
+                (ou seja, em dispositivos não seguros)</li>
+            <li>Não remova documentos confidenciais das instalações da empresa, a menos que seja absolutamente
+                necessário para se mover</li>
         </ul>
     </li>
-    <li>Offboarding measures
+    <li>Medidas de desligamento
         <ul>
-            <li>The Hiring Manager should confirm the off-boarding procedure has been completed by final date of
-                employment.</li>
+            <li>O gerente de contratação deve confirmar que o procedimento de embarque foi concluído até a data final de
+                emprego.</li>
         </ul>
     </li>
-    <li>Confidentiality measures
+    <li>Medidas de confidencialidade
         <ul>
-            <li>The company will take the following measures to ensure protection of confidential information:
+            <li>A empresa tomará as seguintes medidas para garantir a proteção de informações confidenciais:
                 <ul>
-                    <li>Store and lock paper documents</li>
-                    <li>Encrypt electronic information and implement appropriate technical measures to safeguard
-                        databases</li>
-                    <li>Require employees to sign non-disclosure/non-compete agreements</li>
-                    <li>Consult with senior management before granting employees access to certain confidential
-                        information</li>
+                    <li>Armazenar e bloquear documentos em papel</li>
+                    <li>Criptografar informações eletrônicas e implementar medidas técnicas apropriadas para proteger
+                        bancos de dados</li>
+                    <li>Exigem que os funcionários assinem contratos de não divulgação/não concorrência</li>
+                    <li>Consulte a gerência sênior antes de conceder aos funcionários acesso a certos confidenciais
+                        Informação</li>
                 </ul>
             </li>
         </ul>
     </li>
 </ul>
-<h2>Exceptions</h2>
+<h2>Exceções</h2>
 <ul>
-    <li>Under certain legitimate conditions, confidential information may need to be disclosed. Examples include:
+    <li>Sob certas condições legítimas, pode ser necessário divulgar informações confidenciais. Exemplos incluem:
         <ul>
-            <li>If a regulatory agency requests information as part of an audit or investigation</li>
-            <li>If the company requires disclosing information (within legal bounds) as part of a venture or partnership
-            </li>
-            <li>In such cases, employee must request and receive prior written authorization from their hiring manager
-                before disclosing confidential information to any third parties.</li>
+            <li>Se uma agência regulatória solicitar informações como parte de uma auditoria ou investigação</li>
+            <li>Se a empresa precisar de divulgar informações (dentro dos limites legais) como parte de um
+                empreendimento ou parceria</li>
+            <li>Nesses casos, o funcionário deve solicitar e receber autorização prévia por escrito de seu gerente de
+                contratação
+                Antes de divulgar informações confidenciais a terceiros.</li>
         </ul>
     </li>
-    <li>Disciplinary consequences
+    <li>Consequências disciplinares
         <ul>
-            <li>Employees who violate the confidentiality policy will face disciplinary and possible legal action.</li>
-            <li>A suspected breach of this policy will trigger an investigation. Intentional violations will be met with
-                termination and repeated unintentional violations may also face termination.</li>
-            <li>This policy is binding even after the termination of employment.</li>
+            <li>Os funcionários que violarem a política de confidencialidade enfrentarão ações legais disciplinares e
+                possíveis.</li>
+            <li>Uma suspeita de violação desta política desencadeará uma investigação.Violações intencionais serão
+                recebidas com
+                rescisão e violações não intencionais repetidas também podem enfrentar o término.</li>
+            <li>Esta política é vinculativa mesmo após o término do emprego.</li>
         </ul>
     </li>
 </ul>
