--- a/app/files/base_policies/Continuity.html
+++ b/app/files/base_policies/Continuity.html
@@ -1,94 +1,115 @@
-<h2>Purpose and Scope</h2>
-<p>The purpose of this policy is to ensure that the organization establishes objectives, plans and, procedures such that
-    a major disruption to the organization&rsquo;s key business activities is minimized.</p>
-<p>This policy applies to all infrastructure and data within the organization&rsquo;s information security program.</p>
-<p>This policy applies to all management, employees, and suppliers that are involved in decisions and processes
-    affecting the organization&rsquo;s business continuity. This policy must be made readily available to all whom it
-    applies to.</p>
-<h2>Background</h2>
+<h2>Finalidade e âmbito</h2>
+<p>O objetivo desta política é garantir que a organização estabeleça objetivos, planos e procedimentos de modo que
+    Uma grande interrupção nas principais atividades comerciais da organização é minimizada.</p>
+<p>Esta política se aplica a toda infraestrutura e dados no programa de segurança de informações da organização.</p>
+<p>Esta política se aplica a toda a gerência, funcionários e fornecedores envolvidos em decisões e processos
+    afetando a continuidade dos negócios da organização.Esta política deve ser disponibilizada prontamente para todos os
+    quais
+    aplica-se a.</p>
+<h2>Fundo</h2>
 <ul>
-    <li>The success of the organization is reliant upon the preservation of critical business operations and essential
-        functions used to deliver key products and services. The purpose of this policy is to define the criteria for
-        continuing business operations for the organization in the event of a disruption. Specifically, this document
-        defines:
+    <li>O sucesso da organização depende da preservação de operações comerciais críticas e essenciais
+        funções usadas para fornecer produtos e serviços essenciais. O objetivo desta política é definir os critérios
+        para
+        continuidade das operações comerciais da organização em caso de interrupção. Especificamente, este documento
+        define:
         <ul>
-            <li>The structure and authority to ensure business resilience of key processes and systems.</li>
-            <li>The requirements for efforts to manage through a disaster or other disruptive event when the need
-                arises.</li>
-            <li>The criteria to efficiently and effectively resume normal business operations after a disruption.</li>
+            <li>A estrutura e a autoridade para garantir a resiliência dos negócios dos principais processos e sistemas.
+            </li>
+            <li>Os requisitos para os esforços para gerenciar através de um desastre ou outro evento disruptivo quando a
+                necessidade
+                surge.</li>
+            <li>Os critérios para retomar de maneira eficiente e efetiva operações comerciais normais após uma
+                interrupção.</li>
         </ul>
     </li>
-    <li>Within this document, the following definitions apply:
+    <li>Neste documento, aplicam-se as seguintes definições:
         <ul>
-            <li>Business impact analysis/assessment - an exercise that determines the impact of losing the support of
-                any resource to an enterprise, establishes the escalation of that loss over time, identifies the minimum
-                resources needed to return to a normal level of operation, and prioritizes recovery of processes and the
-                supporting system.</li>
-            <li>Disaster recovery plan - a set of human, physical, technical, and procedural resources to return to a
-                normal level of operation, within a defined time and cost, when an activity is interrupted by an
-                emergency or disaster.</li>
-            <li>Recovery time objective - the amount of time allowed for the recovery of a business function or resource
-                to a normal level after a disaster or disruption occurs.</li>
-            <li>Recovery point objective - determined based on the acceptable data loss in the case of disruption of
-                operations.</li>
+            <li>Análise/Avaliação de Impacto dos Negócios - Um exercício que determina o impacto de perder o apoio de
+                Qualquer recurso para uma empresa estabelece a escalada dessa perda ao longo do tempo, identifica o
+                mínimo
+                Recursos necessários para retornar a um nível normal de operação e prioriza a recuperação de processos e
+                o
+                sistema de suporte.</li>
+            <li>Plano de recuperação de desastres - um conjunto de recursos humanos, físicos, técnicos e processuais
+                para retornar a um
+                nível normal de operação, dentro de um tempo e custo definidos, quando uma atividade é interrompida por
+                um
+                emergência ou desastre.</li>
+            <li>Objetivo do tempo de recuperação - a quantidade de tempo permitida para a recuperação de uma função ou
+                recurso comercial
+                a um nível normal após ocorrer um desastre ou interrupção.</li>
+            <li>Objetivo do ponto de recuperação - determinado com base na perda de dados aceitável no caso de
+                interrupção de
+                operações.</li>
         </ul>
     </li>
 </ul>
-<h2>Policy</h2>
+<h2>Política</h2>
 <ul>
-    <li>Business Risk Assessment and Business Impact Analysis
+    <li>Avaliação de riscos empresariais e análise de impacto empresarial
         <ul>
-            <li>Each manager is required to perform a business risk assessment and business impact analysis for each key
-                business system within their area of responsibility.</li>
-            <li>The business risk assessment must identify and define the criticality of key business systems and the
-                repositories that contain the relevant and necessary data for the key business system.</li>
-            <li>The business risk assessment must define and document the Disaster Recovery Plan (DRP) for their area of
-                responsibility. &nbsp;Each DRP shall include:
+            <li>Cada gerente é obrigado a realizar uma avaliação de risco comercial e análise de impacto nos negócios
+                para cada chave
+                sistema de negócios em sua área de responsabilidade.</li>
+            <li>A avaliação de risco comercial deve identificar e definir a criticidade dos principais sistemas de
+                negócios e o
+                Repositórios que contêm os dados relevantes e necessários para o principal sistema de negócios.</li>
+            <li>A avaliação de riscos empresariais deve definir e documentar o Plano de Recuperação de Desastres (DRP)
+                para sua área de atuação.
+                responsabilidade.  Cada DRP deverá incluir:
                 <ul>
-                    <li>Key business processes.</li>
-                    <li>Applicable risk to availability.</li>
-                    <li>Prioritization of recovery.</li>
-                    <li>Recovery Time Objectives (RTOs).</li>
-                    <li>Recovery Point Objectives (RPOs).</li>
+                    <li>Principais processos de negócios.</li>
+                    <li>Risco aplicável à disponibilidade.</li>
+                    <li>Priorização da recuperação.</li>
+                    <li>Objetivos do tempo de recuperação (RTOs).</li>
+                    <li>Objetivos do ponto de recuperação (RPOS).</li>
                 </ul>
             </li>
         </ul>
     </li>
-    <li>Disaster Recovery Plan
+    <li>Plano de Recuperação de Desastres
         <ul>
-            <li>Each key business system must have a documented DRP to provide guidance when hardware, software, or
-                networks become critically dysfunctional or cease to function (short and long term outages).</li>
-            <li>Each DRP must include an explanation of the magnitude of information or system unavailability in the
-                event of an outage and the process that would be implemented to continue business operations during the
-                outage. Where feasible, the DRP must consider the use of alternative, off-site computer operations
-                (cold, warm, hot sites).</li>
-            <li>Each plan must be reviewed against the organization&rsquo;s strategy, objectives, culture, and ethics,
-                as well as policy, legal, statutory and regulatory requirements.</li>
+            <li>Cada sistema de negócios importante deve ter um DRP documentado para fornecer orientação quando
+                hardware, software ou
+                As redes tornam -se criticamente disfuncionais ou deixam de funcionar (interrupções a curto e longo
+                prazo).</li>
+            <li>Cada DRP deve incluir uma explicação da magnitude da informação ou sistema de indisponibilidade no
+                evento de uma interrupção e o processo que seria implementado para continuar as operações de negócios
+                durante o
+                interrupção.Onde viável, o DRP deve considerar o uso de operações alternativas de computador fora do
+                local
+                (Sites frios, quentes e quentes).</li>
+            <li>Cada plano deve ser revisado contra a estratégia, objetivos, cultura e ética da organização,
+                bem como requisitos políticos, legais, estatutários e regulatórios.</li>
             <li>Each DRP must include:
                 <ul>
-                    <li>An emergency mode operations plan for continuing operations in the event of temporary hardware,
-                        software, or network outages.</li>
-                    <li>A recovery plan for returning business functions and services to normal on-site operations.</li>
-                    <li>Procedures for periodic testing, review, and revisions of the DRP for all affected business
-                        systems, as a group and/or individually.</li>
+                    <li>Um plano de operações de modo de emergência para operações continuadas em caso de hardware
+                        temporário,
+                        software ou interrupções de rede.</li>
+                    <li>Um plano de recuperação para devolver funções e serviços de negócios para operações normais no
+                        local.</li>
+                    <li>Procedimentos para testes, revisão e revisões periódicas do DRP para todos os negócios afetados
+                        sistemas, como grupo e/ou individualmente.</li>
                 </ul>
             </li>
         </ul>
     </li>
-    <li>Data Backup and Restoration Plans
+    <li>Planos de backup e Restauração de Dados
         <ul>
-            <li>Each system owner must implement a data backup and restoration plan.</li>
-            <li>Each data backup and restoration plan must identify:
+            <li>Cada proprietário do sistema deve implementar um plano de backup e restauração de dados.</li>
+            <li>Cada plano de backup e restauração de dados deve identificar:
                 <ul>
-                    <li>The data custodian for the system.</li>
-                    <li>The backup schedule of each system.</li>
-                    <li>Where backup media is to be stored and secured, as well as how access is maintained.</li>
-                    <li>Who may remove backup media and transfer it to storage.</li>
-                    <li>Appropriate restoration procedures to restore key business system data from backup media to the
-                        system.</li>
-                    <li>The restoration testing plan and frequency of testing to confirm the effectiveness of the plan.
+                    <li>O custodiante de dados para o sistema.</li>
+                    <li>O cronograma de backup de cada sistema.</li>
+                    <li>Onde a mídia de backup deve ser armazenada e protegida, bem como como o acesso é mantido.</li>
+                    <li>Que podem remover a mídia de backup e transferi -lo para o armazenamento.</li>
+                    <li>Procedimentos de restauração apropriados para restaurar os principais dados do sistema de
+                        negócios da mídia de backup para o
+                        sistema.</li>
+                    <li>O plano de teste de restauração e a frequência dos testes para confirmar a eficácia do plano.
                     </li>
-                    <li>The method for restoring encrypted backup media.</li>
+                    <li>O método para restaurar a mídia de backup criptografada.</li>
                 </ul>
             </li>
         </ul>
