--- a/app/files/base_policies/Cyber.html
+++ b/app/files/base_policies/Cyber.html
@@ -1,69 +1,86 @@
-<h2>Purpose and Scope</h2>
+<h2>Finalidade e âmbito</h2>
 <ul>
-    <li>The purpose of this policy is to define the procedures to assess and treat information security risks within the
-        organization, and to define the acceptable level of risk overall.</li>
-    <li>Risk assessment and risk treatment are applied to the entire scope of the organization&rsquo;s information
-        security program, and to all information systems which are used within the organization or which could have an
-        impact on the organization&rsquo;s information security.</li>
-    <li>This policy applies to all management and employees that take part in the organization&rsquo;s risk assessments.
-        This policy must be made readily available to all whom it applies to.</li>
+    <li>O objetivo desta política é definir os procedimentos para avaliar e tratar os riscos de segurança da informação
+        dentro do
+        organização e definir o nível aceitável de risco em geral.</li>
+    <li>Avaliação de risco e tratamento de risco são aplicados a todo o escopo das informações da organização
+        programa de segurança e para todos os sistemas de informação que são usados ​​dentro da organização ou que podem
+        ter um
+        Impacto na segurança da informação da organização.</li>
+    <li>Esta política se aplica a toda a gerência e funcionários que participam das avaliações de risco da organização.
+        Esta política deve ser disponibilizada prontamente a todos a quem se aplica.</li>
 </ul>
-<h2>Background</h2>
+<h2>Fundo</h2>
 <ul>
-    <li>This policy defines a step-by-step process for conducting risk assessments, as well as to treat identified risks
-        from an information security perspective. This policy also describes how to prepare the Risk Assessment Report
-        required as part of the risk assessment process.</li>
-    <li>When conducting a risk assessment, the organization must identify all organizational information systems . It
-        must then identify all threats and vulnerabilities having to do with such systems , and rate the severity of
-        such threats and vulnerabilities according to a predefined rating scale. Asset and risk owners must be defined
-        for each risk item.</li>
-    <li>Once the risk assessment is completed, the organization shall determine how to manage risks where the overall
-        assessed risk rating is deemed as too high. This management is known as risk treatment. Risk treatment options
-        include but are not limited to applying security controls, outsourcing risk, accepting risk, or discontinuing
-        the activity associated with the risk.</li>
-    <li>A penetration test must be performed by a third party to verify the accuracy of the risk assessment and
-        effectiveness of deployed risk treatments.</li>
+    <li>Esta política define um processo passo a passo para realizar avaliações de risco, bem como tratar riscos
+        identificados
+        de uma perspectiva de segurança da informação.Esta política também descreve como preparar o relatório de
+        avaliação de risco
+        exigido como parte do processo de avaliação de risco.</li>
+    <li>Ao realizar uma avaliação de risco, a organização deve identificar todos os sistemas de informação
+        organizacional.Isto
+        deve então identificar todas as ameaças e vulnerabilidades relacionadas a esses sistemas e avaliar a gravidade
+        de
+        Tais ameaças e vulnerabilidades de acordo com uma escala de classificação predefinida.Os proprietários de ativos
+        e riscos devem ser definidos
+        para cada item de risco.</li>
+    <li>Depois que a avaliação de risco for concluída, a organização determinará como gerenciar riscos onde o geral
+        A classificação de risco avaliada é considerada muito alta.Essa gestão é conhecida como tratamento de
+        risco.Opções de tratamento de risco
+        incluir, entre outros
+        a atividade associada ao risco.</li>
+    <li>Um teste de penetração deve ser realizado por terceiros para verificar a precisão da avaliação de risco e
+        Eficácia dos tratamentos de risco implantados.</li>
 </ul>
-<h2>Procedure To Execute Risk Assessment Report</h2>
+<h2>Procedimento para executar o relatório de avaliação de risco</h2>
 <ul>
-    <li>Confirms that the entire risk assessment and risk treatment process has been carried out according to the Risk
-        Assessment Policy.</li>
-    <li>The purpose of the risk assessment was to identify all information systems &nbsp;their vulnerabilities, and
-        threats that could exploit vulnerabilities. These parameters were further evaluated in order to establish the
-        criticality of individual risks.</li>
-    <li>The purpose of the risk treatment was to define the systematic means of reducing or controlling the risks
-        identified in the risk assessment.</li>
-    <li>All risk assessment and treatment activities were completed within the scope of the organization&rsquo;s
-        information security program.</li>
-    <li>The risk assessment was implemented in the period from [day/month/year] to [day/month/year]. The risk treatment
-        was implemented from [day/month/year] to [day/month/year]. Final reports were prepared during [specify period].
-    </li>
-    <li>The risk assessment and risk treatment process was managed by [person responsible for managing the risk
-        assessment process] with expert assistance provided by [person or company responsible for assistance].</li>
-    <li>During the risk assessment, information was collected through questionnaires and interviews with responsible
-        persons, namely the asset owners across organizational units.</li>
-    <li>The process was conducted as follows:
+    <li>Confirma que todo o processo de avaliação de risco e tratamento de risco foi realizado de acordo com o risco
+        Política de avaliação.</li>
+    <li>O objetivo da avaliação de risco era identificar todos os sistemas de informação suas vulnerabilidades e
+        ameaças que podem explorar vulnerabilidades.Esses parâmetros foram avaliados ainda mais para estabelecer o
+        criticidade dos riscos individuais.</li>
+    <li>O objetivo do tratamento de risco era definir os meios sistemáticos de reduzir ou controlar os riscos
+        identificado na avaliação de risco.</li>
+    <li>Todas as atividades de avaliação e tratamento de risco foram concluídas dentro do escopo da organização
+        Programa de segurança da informação.</li>
+    <li>A avaliação de risco foi implementada no período de [dia/mês/ano] a [dia/mês/ano].O tratamento de risco
+        foi implementado de [dia/mês/ano] a [dia/mês/ano].Os relatórios finais foram preparados durante o [período
+        especificar].</li>
+    <li>O processo de avaliação de risco e tratamento de risco foi gerenciado por [pessoa responsável pelo gerenciamento
+        do risco
+        processo de avaliação] com assistência especializada fornecida por [pessoa ou empresa responsável pela
+        assistência].</li>
+    <li>Durante a avaliação de risco, as informações foram coletadas através de questionários e entrevistas com o
+        responsável
+        Pessoas, a saber, os proprietários de ativos de todas as unidades organizacionais.</li>
+    <li>O processo foi conduzido da seguinte forma:
         <ul>
-            <li>All information systems and their owners were identified.</li>
-            <li>Threats were identified for each asset, and corresponding vulnerabilities were identified for each
-                threat.<br>Risk owners were identified for each risk.</li>
-            <li>Consequences of the loss of confidentiality, integrity and availability were evaluated using a score
-                from 0 to 2, with 0 being the lowest rating and 2 being the highest rating.</li>
-            <li>The likelihood of risk occurrence (i.e. that the threat will exploit the vulnerability) was evaluated
-                using a score from 0 to 2, with 0 being the lowest rating and 2 being the highest rating.</li>
-            <li>The level of risk was calculated by adding up the consequence and likelihood.</li>
-            <li>Risks with a score of 3 or 4 were determined to be unacceptable risks.</li>
-            <li>For each unacceptable risk, a risk treatment option was considered, and appropriate information security
-                controls were selected.</li>
-            <li>After controls were applied, residual risks were assessed.</li>
+            <li>Todos os sistemas de informação e seus proprietários foram identificados.</li>
+            <li>As ameaças foram identificadas para cada ativo e as vulnerabilidades correspondentes foram identificadas
+                para cada
+                ameaça.<br>Os proprietários dos riscos foram identificados para cada risco.</li>
+            <li>As consequências da perda de confidencialidade, integridade e disponibilidade foram avaliadas usando uma
+                pontuação
+                de 0 a 2, sendo 0 a classificação mais baixa e 2 sendo a classificação mais alta.</li>
+            <li>A probabilidade de ocorrência de risco (ou seja, que a ameaça explorará a vulnerabilidade) foi avaliada
+                Usando uma pontuação de 0 a 2, sendo 0 a classificação mais baixa e 2 sendo a classificação mais alta.
+            </li>
+            <li>O nível de risco foi calculado aumentando a consequência e a probabilidade.</li>
+            <li>Os riscos com uma pontuação de 3 ou 4 foram determinados como riscos inaceitáveis.</li>
+            <li>Para cada risco inaceitável, uma opção de tratamento de risco foi considerada e a segurança da
+                informação apropriada
+                Os controles foram selecionados.</li>
+            <li>Depois que os controles foram aplicados, os riscos residuais foram avaliados.</li>
         </ul>
     </li>
-    <li>The following documents were used or generated during the implementation of risk assessment and risk treatment:
+    <li>Os seguintes documentos foram utilizados ou gerados durante a implementação da avaliação e tratamento de riscos:
         <ul>
-            <li>Risk Assessment Table (Appendix A): for each combination of systems , vulnerabilities and threats, this
-                table shows the values for consequence and likelihood, and calculates the risk.</li>
-            <li>Risk Treatment Table (Appendix B): defines the options for risk treatment, selection of controls for
-                each unacceptable risk, and the level of residual risk.</li>
+            <li>Tabela de avaliação de risco (Apêndice A): Para cada combinação de sistemas, vulnerabilidades e ameaças,
+                este
+                A tabela mostra os valores para conseqüência e probabilidade e calcula o risco.</li>
+            <li>Tabela de tratamento de risco (Apêndice B): define as opções para tratamento de risco, seleção de
+                controles para
+                cada risco inaceitável e o nível de risco residual.</li>
         </ul>
     </li>
 </ul>
