--- a/app/files/base_policies/Datacenter.html
+++ b/app/files/base_policies/Datacenter.html
@@ -1,55 +1,62 @@
-<h2>Purpose and Scope</h2>
+<h2>Finalidade e âmbito</h2>
 <ul>
-    <li>The purpose of this policy is to define security procedures within the organization&rsquo;s data centers and
-        secure equipment areas.</li>
-    <li>This policy applies to any cloud hosted providers and facilities within the organization that are labeled as
-        either a data center or a secure equipment area. Such facilities are explicitly called out within this document.
+    <li>O objetivo desta política é definir procedimentos de segurança dentro dos data centers da organização e
+        Áreas de equipamentos seguros.</li>
+    <li>Esta política se aplica a qualquer fornecedor e instalações hospedadas em nuvem dentro da organização que são
+        rotuladas como
+        um data center ou uma área de equipamento seguro.Tais instalações são chamadas explicitamente neste documento.
     </li>
-    <li>This policy applies to all management, employees and suppliers that conduct business operations within cloud
-        host or data centers and secure equipment areas.</li>
+    <li>Esta política se aplica a toda gerenciamento, funcionários e fornecedores que conduzem operações comerciais
+        dentro da nuvem
+        host ou data centers e áreas de equipamentos seguros.</li>
 </ul>
-<h2>Background</h2>
+<h2>Fundo</h2>
 <ul>
-    <li>This policy defines the policies and rules governing data centers and secure equipment areas from both a
-        physical and logical security perspective. The document lists all data centers and secure equipment areas in use
-        by the organization, prescribes how access is controlled and enforced, and establishes procedures for any
-        visitor or third party access. This policy also defines prohibited activities and requirements for periodic
-        safety and security checks.</li>
+    <li>Esta política define as políticas e regras que regem os data centers e as áreas de equipamentos seguros de ambos
+        Perspectiva de segurança física e lógica.O documento lista todos os data centers e áreas de equipamentos seguros
+        em uso
+        pela organização, prescreve como o acesso é controlado e aplicado e estabelece procedimentos para qualquer
+        Visitante ou acesso de terceiros.Esta política também define atividades e requisitos proibidos para periódicos
+        Verificações de segurança.</li>
 </ul>
-<h2>Policy</h2>
+<h2>Políticas</h2>
 <ul>
-    <li>The following locations are classified by the organization as secure areas and are governed by this policy:
+    <li>Os seguintes locais são classificados pela organização como áreas seguras e são regidos por esta política:
         <ul>
-            <li>[list all data center locations and secure areas under the organization&rsquo;s control]</li>
+            <li>[Liste todos os locais do data center e áreas seguras sob o controle da organização]</li>
         </ul>
     </li>
-    <li>Each data center and secure area must have a manager assigned. The manager&rsquo;s name must be documented in
-        the organization&rsquo;s records. In the case of any on-prem data centers, the manager&rsquo;s name must also be
-        posted in and near the secure area.</li>
-    <li>Each secure area must be clearly marked. Access to the secure area must be controlled by at least a locked door.
-        A visitor access log must be clearly marked and easily accessible just inside the door.</li>
+    <li>Cada data center e área segura devem ter um gerente atribuído.O nome do gerente deve ser documentado em
+        os registros da organização.No caso de qualquer data centers no local, o nome do gerente também deve ser
+        Postado em e perto da área segura.</li>
+    <li>Cada área segura deve estar claramente marcada.O acesso à área segura deve ser controlado por pelo menos uma
+        porta trancada.
+        Um registro de acesso ao visitante deve ser claramente marcado e facilmente acessível dentro da porta.</li>
     <li>Persons who are not employed by the organization are considered to be visitors. Visitors accessing secure areas
         shall:
         <ul>
-            <li>Obtain access to secure areas in accordance with reference a.</li>
-            <li>Only enter and remain in secure areas when escorted by a designated employee. The employee must stay
-                with the visitor during their entire stay inside the secure area.</li>
-            <li>Log the precise time of entry and exit in the visitor access log.</li>
+            <li>Obtenha acesso a áreas seguras de acordo com a referência a.</li>
+            <li>Entre e permaneça em áreas seguras quando escoltado por um funcionário designado.O funcionário deve
+                ficar
+                com o visitante durante toda a sua estadia dentro da área segura.</li>
+            <li>Registre o tempo preciso de entrada e saída no log de acesso ao visitante.</li>
         </ul>
     </li>
     <li>The following activities are prohibited inside secure areas:
         <ul>
-            <li>Photography, or video or audio recordings of any kind.</li>
-            <li>Connection of any electrical device to a power supply, unless specifically authorized by the responsible
-                person.</li>
-            <li>Unauthorized usage of or tampering with any installed equipment.</li>
-            <li>Connection of any device to the network, unless specifically authorized by the responsible person.</li>
-            <li>Storage or archival of large amounts of paper materials.</li>
-            <li>Storage of flammable materials or equipment.</li>
-            <li>Use of portable heating devices.</li>
-            <li>Smoking, eating, or drinking.</li>
+            <li>Fotografia, ou gravações de vídeo ou áudio de qualquer tipo.</li>
+            <li>Conexão de qualquer dispositivo elétrico a uma fonte de alimentação, a menos que especificamente
+                autorizado pelo responsável
+                pessoa.</li>
+            <li>Uso não autorizado ou adulteração com qualquer equipamento instalado.</li>
+            <li>Conexão de qualquer dispositivo à rede, a menos que especificamente autorizado pela pessoa responsável.
+            </li>
+            <li>Armazenamento ou arquivo de grandes quantidades de materiais de papel.</li>
+            <li>Armazenamento de materiais ou equipamentos inflamáveis.</li>
+            <li>Uso de dispositivos de aquecimento portátil.</li>
+            <li>Fumar, comer ou beber.</li>
         </ul>
     </li>
-    <li>Secure areas must be checked for compliance with security and safety requirements on at least a quarterly basis.
-    </li>
+    <li>As áreas seguras devem ser verificadas quanto à conformidade com os requisitos de segurança e segurança em pelo
+        menos trimestralmente.</li>
 </ul>
