--- a/app/files/base_policies/Information.html
+++ b/app/files/base_policies/Information.html
@@ -1,90 +1,107 @@
-<h2>Purpose and Scope</h2>
+<h2>Finalidade e âmbito</h2>
 <ul>
-    <li>This information security policy defines the purpose, principles, objectives and basic rules for information
-        security management.</li>
-    <li>This document also defines procedures to implement high level information security protections within the
-        organization, including definitions, procedures, responsibilities and performance measures (metrics and
-        reporting mechanisms).</li>
-    <li>This policy applies to all users of information systems within the organization. This typically includes
-        employees and contractors, as well as any external parties that come into contact with systems and information
-        controlled by the organization (hereinafter referred to as &ldquo;users&rdquo;). This policy must be made
-        readily available to all users.</li>
+    <li>Esta política de segurança da informação define o objetivo, os princípios, os objetivos e as regras básicas para
+        informações
+        gerenciamento de segurança.</li>
+    <li>Este documento também define procedimentos para implementar proteções de segurança da informação de alto nível
+        dentro do
+        organização, incluindo definições, procedimentos, responsabilidades e medidas de desempenho (métricas e
+        mecanismos de relatório).</li>
+    <li>Esta política se aplica a todos os usuários de sistemas de informação dentro da organização.Isso normalmente
+        inclui
+        funcionários e contratados, bem como qualquer parte externa que entre em contato com sistemas e informações
+        controlado pela organização (a seguir denominada "usuários").Esta política deve ser feita
+        prontamente disponível para todos os usuários.</li>
 </ul>
-<h2>Background</h2>
+<h2>Fundo</h2>
 <ul>
-    <li>This policy defines the high level objectives and implementation instructions for the organization&rsquo;s
-        information security program. It includes the organization&rsquo;s information security objectives and
-        requirements; such objectives and requirements are to be referenced when setting detailed information security
-        policy for other areas of the organization. This policy also defines management roles and responsibilities for
-        the organization&rsquo;s Information Security Management System (ISMS). Finally, this policy references all
-        security controls implemented within the organization.</li>
-    <li>Within this document, the following definitions apply:
+    <li>Esta política define os objetivos de alto nível e as instruções de implementação para a organização
+        Programa de segurança da informação.Inclui os objetivos de segurança da informação da organização e
+        requisitos;Tais objetivos e requisitos devem ser referenciados ao definir a segurança detalhada da informação
+        Política para outras áreas da organização.Esta política também define funções e responsabilidades de
+        gerenciamento para
+        o sistema de gerenciamento de segurança de informações da organização (ISMS).Finalmente, esta política faz
+        referência a todos
+        Controles de segurança implementados dentro da organização.</li>
+    <li>Neste documento, aplicam-se as seguintes definições:
         <ul>
-            <li>Confidentiality: a characteristic of information or information systems in which such information or
-                systems are only available to authorized entities.</li>
-            <li>Integrity: a characteristic of information or information systems in which such information or systems
-                may only be changed by authorized entities, and in an approved manner.</li>
-            <li>Availability: a characteristic of information or information systems in which such information or
-                systems can be accessed by authorized entities whenever needed.</li>
-            <li>Information Security: the act of preserving the confidentiality, integrity, and, availability of
-                information and information systems.</li>
-            <li>Information Security Management System (ISMS): the overall management process that includes the
-                planning, implementation, maintenance, review, and, improvement of information security.</li>
+            <li>Confidencialidade: uma característica da informação ou sistemas de informação nos quais essas
+                informações ou
+                Os sistemas estão disponíveis apenas para entidades autorizadas.</li>
+            <li>Integridade: uma característica da informação ou sistemas de informação nos quais essas informações ou
+                sistemas
+                só pode ser alterado por entidades autorizadas e de maneira aprovada.</li>
+            <li>Disponibilidade: uma característica de informações ou sistemas de informação nos quais essas informações
+                ou
+                Os sistemas podem ser acessados ​​por entidades autorizadas sempre que necessário.</li>
+            <li>Segurança da informação: o ato de preservar a confidencialidade, integridade e disponibilidade de
+                Sistemas de informação e informação.</li>
+            <li>Sistema de gerenciamento de segurança da informação (ISMS): o processo geral de gerenciamento que inclui
+                o
+                Planejamento, implementação, manutenção, revisão e melhoria da segurança da informação.</li>
         </ul>
     </li>
 </ul>
-<h2>References</h2>
+<h2>Referências</h2>
 <ul>
-    <li>Encryption Policy</li>
-    <li>Data Center Security Policy</li>
-    <li>Disaster Recovery Policy</li>
-    <li>Password Policy</li>
-    <li>Remote Access Policy</li>
-    <li>Removable Media/Cloud Storage/BYOD Policy</li>
-    <li>Risk Assessment Policy</li>
-    <li>Security Incident Response Policy</li>
-    <li>Software Development Lifecycle Policy</li>
-    <li>System Availability Policy</li>
-    <li>Workstation Security Policy</li>
+    <li>Política de criptografia</li>
+    <li>Política de segurança do data center</li>
+    <li>Política de recuperação de desastres</li>
+    <li>Política de senha</li>
+    <li>Política de Acesso Remoto</li>
+    <li>Mídia removível/Política de armazenamento em nuvem/BYOD</li>
+    <li>Política de avaliação de risco</li>
+    <li>Política de resposta a incidentes de segurança</li>
+    <li>Política de Lifecycle de desenvolvimento de software</li>
+    <li>Política de disponibilidade do sistema</li>
+    <li>Política de segurança da estação de trabalho</li>
 </ul>
 <h2>Policy</h2>
-<p><strong>Managing Information Security</strong></p>
+<p><strong>Gerenciando a segurança da informação</strong></p>
 <ul>
-    <li>The organization&rsquo;s main objectives for information security include the following:
+    <li>The organization’s main objectives for information security include the following:
         <ul>
-            <li>[list the reasons/objectives for maintaining information security at the organization. Examples include
-                a better market image, reduced risk of data breaches and compromises, and compliance with legal,
-                regulatory, and contractual requirements.]</li>
+            <li>[Liste os motivos/objetivos para manter a segurança da informação na organização.Exemplos incluem
+                Uma melhor imagem de mercado, risco reduzido de violações e compromissos de dados e conformidade com
+                legal,
+                Requisitos regulatórios e contratuais.]</li>
         </ul>
     </li>
-    <li>The organization&rsquo;s objectives for information security are in line with the organization&rsquo;s business
-        objectives, strategy, and plans.</li>
-    <li>Objectives for individual security controls or groups of controls are proposed by the company management team,
-        including but not limited to [list key roles inside the organization that will participate in information
-        security matters], and others as appointed by the CEO; these security controls are approved by the CEO in
-        accordance with the Risk Assessment Policy (Reference (a)).</li>
-    <li>All objectives must be reviewed at least once per year.</li>
-    <li>The company will measure the fulfillment of all objectives. The measurement will be performed at least once per
-        year. The results must be analyzed, evaluated, and reported to the management team.</li>
+    <li>Os objetivos da organização para a segurança da informação estão alinhados com os negócios da organização
+        Objetivos, estratégia e planos.</li>
+    <li>Objetivos para controles de segurança individuais ou grupos de controles são propostos pela equipe de
+        gerenciamento da empresa,
+        incluindo, entre outros
+        questões de segurança] e outros nomeados pelo CEO;Esses controles de segurança são aprovados pelo CEO em
+        conforme a política de avaliação de risco (referência (a)).</li>
+    <li>Todos os objetivos devem ser revisados ​​pelo menos uma vez por ano.</li>
+    <li>A Companhia medirá o cumprimento de todos os objetivos.A medição será realizada pelo menos uma vez por
+        ano.Os resultados devem ser analisados, avaliados e relatados à equipe de gerenciamento.</li>
 </ul>
-<p><strong>Information Security Requirements</strong></p>
+<p><strong>Requisitos de segurança da informação</strong></p>
 <ul>
-    <li>This policy and the entire information security program must be compliant with legal and regulatory requirements
-        as well as with contractual obligations relevant to the organization.</li>
-    <li>All employees, contractors, and other individuals subject to the organization&rsquo;s information security
-        policy must read and acknowledge all information security policies.</li>
-    <li>The process of selecting information security controls and safeguards for the organization is defined in
-        Reference (a).</li>
-    <li>The organization prescribes guidelines for remote workers as part of the Remote Access Policy (reference (b)).
-    </li>
-    <li>To counter the risk of unauthorized access, the organization maintains a Data Center Security Policy (reference
+    <li>Esta política e todo o programa de segurança da informação devem estar em conformidade com os requisitos legais
+        e regulatórios
+        bem como com obrigações contratuais relevantes para a organização.</li>
+    <li>Todos os funcionários, contratados e outros indivíduos sujeitos à segurança da informação da organização
+        A política deve ler e reconhecer todas as políticas de segurança da informação.</li>
+    <li>O processo de seleção de controles de segurança da informação e salvaguardas para a organização é definido em
+        Referência (a).</li>
+    <li>A organização prescreve diretrizes para trabalhadores remotos como parte da política de acesso remoto
+        (referência (b)).</li>
+    <li>Para combater o risco de acesso não autorizado, a organização mantém uma política de segurança do data center
+        (referência
         (c)).</li>
-    <li>Security requirements for the software development life cycle, including system development, acquisition and
-        maintenance are defined in the Software Development Lifecycle Policy (reference (d)).</li>
-    <li>Security requirements for handling information security incidents are defined in the Security Incident Response
-        Policy (reference (e)).</li>
-    <li>Disaster recovery and business continuity management policy is defined in the Disaster Recovery Policy
-        (reference (f)).</li>
-    <li>Requirements for information system availability and redundancy are defined in the System Availability Policy
-        (reference (g)).</li>
+    <li>Requisitos de segurança para o ciclo de vida de desenvolvimento de software, incluindo desenvolvimento de
+        sistemas, aquisição e
+        A manutenção é definida na política do ciclo de vida de desenvolvimento de software (referência (d)).</li>
+    <li>Os requisitos de segurança para lidar com os incidentes de segurança da informação são definidos na resposta ao
+        incidente de segurança
+        Política (Referência (e)).</li>
+    <li>Recuperação de desastres e política de gerenciamento de continuidade de negócios são definidas na Política de
+        Recuperação de Desastres
+        (referência (f)).</li>
+    <li>Os requisitos para a disponibilidade e redundância do sistema de informações são definidos na Política de
+        Disponibilidade do Sistema
+        (referência (g)).</li>
 </ul>
