--- a/app/files/base_policies/Office.html
+++ b/app/files/base_policies/Office.html
@@ -1,84 +1,94 @@
-<h2>Purpose and Scope</h2>
+<h2>Finalidade e âmbito</h2>
 <ul>
-    <li>This policy establishes the rules governing controls, monitoring, and removal of physical access to
-        company&rsquo;s facilities.</li>
-    <li>This policy applies to all staff, contractors, or third parties who require access to any physical location
-        owned, operated, or otherwise occupied by the company. A separate policy exists for governing access to the
-        company data center.</li>
+    <li>Esta política estabelece as regras que regem os controles, o monitoramento e a remoção do acesso físico a
+        instalações da empresa.</li>
+    <li>Esta política se aplica a todos os funcionários, contratados ou terceiros que exigem acesso a qualquer local
+        físico
+        de propriedade, operada ou ocupada pela empresa.Existe uma política separada para governar o acesso ao
+        Data Center da empresa.</li>
 </ul>
-<h2>Policy</h2>
-<p><strong>Management responsibilities</strong></p>
+<h2>Política</h2>
+<p><strong>Responsabilidades de gerenciamento</strong></p>
 <ul>
-    <li>Management shall ensure:
+    <li>A gestão deve garantir:
         <ul>
-            <li>appropriate entry controls are in place for secure areas</li>
-            <li>security personnel, identification badges, or electronic key cards should be used to validate employee
-                access to facilities</li>
-            <li>confirm visitor &amp; guest access procedure has been followed by host staff</li>
-            <li>management periodically reviews list of individuals with physical access to facilities</li>
-            <li>card access records and visitor logs are kept for a minimum of 90 days and are periodically reviewed for
-                unusual activity</li>
+            <li>Os controles de entrada adequados estão em vigor para áreas seguras</li>
+            <li>Pessoal de segurança, crachás de identificação ou cartões-chave eletrônicos devem ser usados ​​para
+                validar o funcionário
+                acesso a instalações</li>
+            <li>Confirme o procedimento de acesso ao visitante e convidado foi seguido pela equipe anfitriã</li>
+            <li>Gerenciamento revisa periodicamente a lista de indivíduos com acesso físico a instalações</li>
+            <li>Os registros de acesso a cartões e os registros dos visitantes são mantidos por um mínimo de 90 dias e
+                são revisados ​​periodicamente para
+                atividade incomum</li>
         </ul>
     </li>
 </ul>
-<p><strong>Key access &amp; card systems</strong></p>
+<p><strong>Acesso-chave e sistemas de cartões</strong></p>
 <ul>
-    <li>The following policies are applied to all facility access cards/keys:
+    <li>As seguintes políticas são aplicadas a todos os cartões/chaves de acesso às instalações:
         <ul>
-            <li>Access cards/keys shall not be shared or loaned to others</li>
-            <li>Access cards/keys shall not have identifying information other than a return mail address</li>
-            <li>Access cards/keys shall be returned to Human Resources when they are no longer needed</li>
-            <li>Lost or stolen access cards/keys shall be reported immediately</li>
-            <li>If an employee changes to a role that no longer requires physical access or leaves the company, their
-                access cards/keys will be suspended</li>
-            <li>Human Resources will regularly review physical security privileges and review access logs</li>
+            <li>Os cartões/chaves de acesso não devem ser compartilhados ou emprestados a outros</li>
+            <li>Os cartões/chaves de acesso não devem ter informações de identificação além de um endereço de e -mail de
+                retorno</li>
+            <li>Os cartões/chaves de acesso devem ser devolvidos aos recursos humanos quando não forem mais necessários
+            </li>
+            <li>Cartões/chaves de acesso perdidos ou roubados devem ser relatados imediatamente</li>
+            <li>Se um funcionário muda para uma função que não requer mais acesso físico ou sai da empresa, seu
+                Cartões de acesso/chaves serão suspensos</li>
+            <li>Recursos humanos revisarão regularmente os privilégios de segurança física e revisarão logs de acesso
+            </li>
         </ul>
     </li>
 </ul>
-<p><strong>Staff &amp; contractor access procedure</strong></p>
+<p><strong>Procedimento de acesso à equipe e contratante</strong></p>
 <ul>
-    <li>Access to physical locations is granted to employees and contractors based on individual job function and will
-        be granted by Human Resources.</li>
-    <li>Any individual granted access to physical spaces will be issued a physical key or access key card. Key and card
-        issuance is tracked by Human Resources and will be periodically reviewed.</li>
-    <li>In the case of termination, Human Resources should ensure immediate revocation of access<br>(i.e. collection of
-        keys, access cards, and any other asset used to enter facilities) through the offboarding procedure.</li>
+    <li>O acesso a locais físicos é concedido a funcionários e contratados com base na função de trabalho individual e
+        ser concedido por recursos humanos.</li>
+    <li>Qualquer indivíduo concedido acesso a espaços físicos receberá uma chave física ou um cartão de acesso.Chave e
+        cartão
+        A emissão é rastreada por recursos humanos e será revisada periodicamente.</li>
+    <li>Em caso de rescisão, os Recursos Humanos deverão garantir a revogação imediata do acesso<br>(ou seja, recolha
+        de
+        chaves, cartões de acesso e qualquer outro bem utilizado para entrar nas instalações) através do procedimento de desligamento.</li>
 </ul>
-<p><strong>Visitor &amp; guest access procedure</strong></p>
+<p><strong>Procedimento de Acesso ao Visitante e Convidado</strong></p>
 <ul>
-    <li>The following policies are applied to identification &amp; authorization of visitors and guests:
+    <li>As políticas a seguir são aplicadas à identificação e identificação. autorização de visitantes e convidados:
         <ul>
-            <li>All visitors must request and receive written onsite authorization from a staff member.</li>
-            <li>Visitor access shall be tracked with a sign in/out log. The log shall contain:visitor&rsquo;s name, firm
-                represented, purpose of visit, and onsite personnel authorizing access</li>
-            <li>The log shall be retained for a minimum of 90 days</li>
-            <li>Visitors shall be given a badge or other identification that visibly distinguishes visitors from onsite
-                personnel</li>
-            <li>Visitor badges shall be surrendered before leaving the facility</li>
+            <li>Todos os visitantes devem solicitar e receber autorização escrita no local de um membro da equipe.</li>
+            <li>O acesso ao visitante deve ser rastreado com um log de entrada/saída.O log deve conter: nome do
+                visitante, empresa
+                Representado, objetivo da visita e pessoal no local autorizando o acesso</li>
+            <li>O log deve ser retido por um mínimo de 90 dias</li>
+            <li>Os visitantes devem receber um crachá ou outra identificação que distingue visivelmente os visitantes do
+                local
+                pessoal</li>
+            <li>Os crachás de visitantes devem ser entregues antes de deixar a instalação</li>
         </ul>
     </li>
 </ul>
-<p><strong>Audit controls &amp; management</strong></p>
+<p><strong>Controles de auditoria e gerenciamento</strong></p>
 <ul>
-    <li>Documented procedures and evidence of practice should be in place for this policy. Acceptable controls and
-        procedures include:
+    <li>Procedimentos documentados e evidências de prática devem estar em vigor para esta política. Controles aceitáveis ​​e
+        procedimentos incluem:
         <ul>
-            <li>visitor logs</li>
-            <li>access control procedures</li>
-            <li>operational key-card access systems</li>
-            <li>video surveillance systems (with retrievable data)</li>
-            <li>ledgers if issuing physical keys</li>
+            <li>Torros de visitantes</li>
+            <li>Procedimentos de controle de acesso</li>
+            <li>Sistemas de acesso de cartão-chave operacional</li>
+            <li>Sistemas de vigilância por vídeo (com dados recuperáveis)</li>
+            <li>Livros contábeis emitir chaves físicas</li>
         </ul>
     </li>
 </ul>
-<p><strong>Enforcement</strong></p>
+<p><strong>Aplicação</strong></p>
 <ul>
-    <li>Employees, contractors, or third parties found in violation of this policy (whether intentional or accidental)
-        may be subject to disciplinary action, including:
+    <li>Funcionários, contratados ou terceiros que violarem esta política (seja intencional ou acidental)
+        pode estar sujeito a ações disciplinares, incluindo:
         <ul>
-            <li>reprimand</li>
-            <li>loss of access to premises</li>
-            <li>termination</li>
+            <li>reprimenda</li>
+            <li>Perda de acesso a instalações</li>
+            <li>terminação</li>
         </ul>
     </li>
 </ul>
