--- a/app/files/base_policies/Password.html
+++ b/app/files/base_policies/Password.html
@@ -1,36 +1,43 @@
-<h2>Purpose and Scope</h2>
+<h2>Finalidade e âmbito</h2>
 <ul>
-    <li>The Password Policy describes the procedure to select and securely manage passwords.</li>
-    <li>This policy applies to all employees, contractors, and any other personnel who have an account on any system
-        that resides at any company facility or has access to the company network.</li>
+    <li>A Política de Senha descreve o procedimento para selecionar e gerenciar com segurança senhas.</li>
+    <li>Esta política se aplica a todos os funcionários, contratados e qualquer outro pessoal que tenha uma conta em
+        qualquer sistema
+        Isso reside em qualquer instalação da empresa ou tem acesso à rede da empresa.</li>
 </ul>
-<h2>Policy</h2>
+<h2>Política</h2>
 <ul>
-    <li>Rotation requirements
+    <li>Requisitos de rotação
         <ul>
-            <li>All system-level passwords should be rotated on at least a quarterly basis. All user-level passwords
-                should be rotated at least every six months.</li>
-            <li>If a credential is suspected of being compromised, the password in question should be rotated
-                immediately and the Engineering/Security team should be notified.</li>
+            <li>Todas as senhas no nível do sistema devem ser giradas pelo menos trimestralmente.Todas as senhas em
+                nível de usuário
+                deve ser girado pelo menos a cada seis meses.</li>
+            <li>Se houver suspeita de uma credencial de ser comprometida, a senha em questão deve ser girada
+                Imediatamente e a equipe de engenharia/segurança deve ser notificada.</li>
         </ul>
     </li>
-    <li>Password protection
+    <li>Proteção de senha
         <ul>
-            <li>All passwords are treated as confidential information and should not be shared with anyone. If you
-                receive a request to share a password, deny the request and contact the system owner for assistance in
-                provisioning an individual user account.</li>
-            <li>Do not write down passwords, store them in emails, electronic notes, or mobile devices, or share them
-                over the phone. If you must store passwords electronically, do so with a password manager that has been
-                approved by IT. If you truly must share a password, do so through a designated password manager or grant
-                access to an application through a single sign on provider.</li>
-            <li>Do not use the &ldquo;Remember Password&rdquo; feature of applications and web browsers.</li>
-            <li>If you suspect a password has been compromised, rotate the password immediately and notify
-                engineering/security.</li>
+            <li>Todas as senhas são tratadas como informações confidenciais e não devem ser compartilhadas com
+                ninguém.Se você
+                Receba uma solicitação para compartilhar uma senha, negar a solicitação e entre em contato com o
+                proprietário do sistema para obter assistência em
+                provisionando uma conta de usuário individual.</li>
+            <li>Não escreva senhas, armazene -as em e -mails, notas eletrônicas ou dispositivos móveis ou compartilhe
+                -os
+                Pelo telefone.Se você precisar armazenar senhas eletronicamente, faça -o com um gerenciador de senhas
+                que tenha sido
+                aprovado por ele.Se você realmente deve compartilhar uma senha, faça -o por meio de um gerenciador de
+                senhas designado ou concessão
+                Acesso a um aplicativo através de um único sinal no provedor.</li>
+            <li>Não use o recurso "Lembre -se de senha" de aplicativos e navegadores da Web.</li>
+            <li>Se você suspeitar que uma senha foi comprometida, gire a senha imediatamente e notifique
+                Engenharia/Segurança.</li>
         </ul>
     </li>
-    <li>Enforcement
+    <li>Aplicação
         <ul>
-            <li>An employee or contractor found to have violated this policy may be subject to disciplinary action.</li>
+            <li>Um funcionário ou contratado que violou essa política pode estar sujeito a ações disciplinares.</li>
         </ul>
     </li>
 </ul>
