--- a/app/files/base_policies/Policy.html
+++ b/app/files/base_policies/Policy.html
@@ -1,21 +1,23 @@
-<h2>Purpose and Scope</h2>
+<h2>Finalidade e âmbito</h2>
 <ul>
-    <li>This policy addresses policy education requirements for employees and contractors.</li>
-    <li>This policy applies to all full-time employees, part-time employees, and contractors. Adherence to assigned
-        policies is binding under their Employment Offer Letter and/or Independent Contractor Agreement.</li>
+    <li>Esta política atende aos requisitos de educação de políticas para funcionários e contratados.</li>
+    <li>Esta política se aplica a todos os funcionários em período integral, funcionários em período parcial e
+        contratados.Aderência a atribuir
+        As políticas são vinculativas sob sua carta de oferta de emprego e/ou contrato de contratante independente.</li>
 </ul>
-<h2>Applicability</h2>
+<h2>Aplicabilidade</h2>
 <ul>
-    <li>Upon hire of a new employee or contractor, the Hiring Manager will determine which subsets of policies will
-        apply to that individual. The individual will have five working days to read the assigned policies. The
-        following will be logged in the Policy Training Policy Ledger:
+    <li>Após a contratação de um novo funcionário ou contratado, o Gerente de Contratação determinará quais subconjuntos
+        de políticas serão
+        aplicar a esse indivíduo. O indivíduo terá cinco dias úteis para ler as políticas atribuídas. O
+        o seguinte será registrado no livro razão de políticas de treinamento de políticas:
         <ul>
-            <li>Assignment date</li>
-            <li>Completion date</li>
-            <li>Policy</li>
-            <li>Assignee</li>
-            <li>Assigner</li>
-            <li>Notes</li>
+            <li>Data de atribuição</li>
+            <li>Data de conclusão</li>
+            <li>Polícia</li>
+            <li>Cessionário</li>
+            <li>Atribuir</li>
+            <li>Notas</li>
         </ul>
     </li>
 </ul>
