--- a/app/files/base_policies/Remote.html
+++ b/app/files/base_policies/Remote.html
@@ -1,66 +1,81 @@
-<h2>Purpose and Scope</h2>
+<h2>Finalidade e âmbito</h2>
 <ul>
-    <li>The purpose of this policy is to define requirements for connecting to the organization&rsquo;s systems and
-        networks from remote hosts, including personally-owned devices, in order to minimize data loss/exposure.</li>
-    <li>This policy applies to all users of information systems within the organization. This typically includes
-        employees and contractors, as well as any external parties that come into contact with systems and information
-        controlled by the organization (hereinafter referred to as &ldquo;users&rdquo;). This policy must be made
-        readily accessible to all users.</li>
+    <li>O objetivo desta política é definir requisitos para se conectar aos sistemas da organização e
+        Redes de hosts remotos, incluindo dispositivos de propriedade pessoal, a fim de minimizar a perda/exposição de
+        dados.</li>
+    <li>Esta política se aplica a todos os usuários de sistemas de informação dentro da organização.Isso normalmente
+        inclui
+        funcionários e contratados, bem como qualquer parte externa que entre em contato com sistemas e informações
+        controlado pela organização (a seguir denominada "usuários").Esta política deve ser feita
+        prontamente acessível a todos os usuários.</li>
 </ul>
-<h2>Background</h2>
+<h2>Fundo</h2>
 <ul>
-    <li>The intent of this policy is to minimize the organization&rsquo;s exposure to damages which may result from the
-        unauthorized remote use of resources, including but not limited to: the loss of sensitive, company confidential
-        data and intellectual property; damage to the organization&rsquo;s public image; damage to the
-        organization&rsquo;s internal systems; and fines and/or other financial liabilities incurred as a result of such
-        losses.</li>
-    <li>Within this policy, the following definitions apply:
+    <li>A intenção desta política é minimizar a exposição da organização a danos que podem resultar do
+        Uso remoto não autorizado de recursos, incluindo, entre outros
+        dados e propriedade intelectual;danos à imagem pública da organização;dano ao
+        sistemas internos da organização;e multas e/ou outros passivos financeiros incorridos como resultado de tal
+        perdas.</li>
+    <li>Dentro desta política, as seguintes definições se aplicam:
         <ul>
-            <li>Mobile computing equipment: includes portable computers, mobile phones, smart phones, memory cards and
-                other mobile equipment used for storage, processing and transfer of data.</li>
-            <li>Remote host: is defined as an information system, node or network that is not under direct control of
-                the organization.</li>
-            <li>Telework: the act of using mobile computing equipment and remote hosts to perform work outside the
-                organization&rsquo;s physical premises. Teleworking does not include the use of mobile phones.</li>
+            <li>Equipamento de computação móvel: inclui computadores portáteis, telefones celulares, smartphones,
+                cartões de memória e
+                Outros equipamentos móveis usados ​​para armazenamento, processamento e transferência de dados.</li>
+            <li>Host remoto: é definido como um sistema de informação, nó ou rede que não está sob controle direto de
+                a organização.</li>
+            <li>Teleteração: o ato de usar equipamentos de computação móvel e hosts remotos para realizar trabalhos fora
+                do
+                premissas físicas da organização.O teletrabalho não inclui o uso de telefones celulares.</li>
         </ul>
     </li>
 </ul>
-<h2>Policy</h2>
+<h2>Política</h2>
 <ul>
-    <li>Security Requirements for Remote Hosts and Mobile Computing Equipment
+    <li>Requisitos de Segurança para Hosts Remotos e Equipamentos de Computação Móvel
         <ul>
-            <li>Caution must be exercised when mobile computing equipment is placed or used in uncontrolled spaces such
-                as vehicles, public spaces, hotel rooms, meeting places, conference centers, and other unprotected areas
-                outside the organization&rsquo;s premises.</li>
-            <li>When using remote hosts and mobile computing equipment, users must take care that information on the
-                device (e.g. displayed on the screen) cannot be read by unauthorized persons if the device is being used
-                to connect to the organization&rsquo;s systems or work with the organization&rsquo;s data.</li>
-            <li>Remote hosts must be updated and patched for the latest security updates on at least a monthly basis.
-            </li>
-            <li>Remote hosts must have endpoint protection software (e.g. malware scanner) installed and updated at all
-                times.</li>
-            <li>Persons using mobile computing equipment off-premises are responsible for regular backups of
-                organizational data that resides on the the device.</li>
-            <li>Access to the organization&rsquo;s systems must be done through an encrypted and authenticated VPN
-                connection with multi-factor authentication enabled. All users requiring remote access must be
-                provisioned with VPN credentials from the organization&rsquo;s information technology team. VPN keys
-                must be rotated at least twice per year. Revocation of VPN keys must be included in the Offboarding
-                Policy.</li>
-            <li>Information stored on mobile computing equipment must be encrypted using hard drive full disk
-                encryption.</li>
+            <li>Cuidado deve ser exercido quando o equipamento de computação móvel é colocado ou usado em espaços não
+                controlados, como
+                Como veículos, espaços públicos, quartos de hotel, locais de reunião, centros de conferências e outras
+                áreas desprotegidas
+                Fora das instalações da organização.</li>
+            <li>Ao usar hosts remotos e equipamentos de computação móvel, os usuários devem cuidar que as informações no
+                dispositivo (por exemplo, exibido na tela) não pode ser lido por pessoas não autorizadas se o
+                dispositivo estiver sendo usado
+                Para conectar -se aos sistemas da organização ou trabalhar com os dados da organização.</li>
+            <li>Os hosts remotos devem ser atualizados e corrigidos para as atualizações de segurança mais recentes pelo
+                menos mensalmente.</li>
+            <li>Os hosts remotos devem ter o software de proteção de terminais (por exemplo, scanner de malware)
+                instalado e atualizado
+                vezes.</li>
+            <li>Pessoas que usam equipamentos de computação móvel Premises são responsáveis ​​por backups regulares de
+                Dados organizacionais que residem no dispositivo.</li>
+            <li>O acesso aos sistemas da organização deve ser feito através de uma VPN criptografada e autenticada
+                Conexão com a autenticação multifatorial ativada.Todos os usuários que precisam de acesso remoto devem
+                ser
+                provisionado com credenciais da VPN da equipe de tecnologia da informação da organização.Chaves VPN
+                deve ser girado pelo menos duas vezes por ano.A revogação das teclas VPN deve ser incluída no offboard
+                Política.</li>
+            <li>As informações armazenadas em equipamentos de computação móvel devem ser criptografadas usando disco
+                rígido em disco completo
+                criptografia.</li>
         </ul>
     </li>
-    <li>Security Requirements for Telework
+    <li>Requisitos de Segurança para Teletrabalho
         <ul>
-            <li>Employees must be specifically authorized for telework in writing from their hiring manager .</li>
-            <li>Only device&rsquo;s assigned owner is permitted to use remote nodes and mobile computing equipment.
-                Unauthorized users (such as others living or working at the location where telework is performed) are
-                not permitted to use such devices.</li>
-            <li>Devices must be authorized using certificates</li>
-            <li>Users performing telework are responsible for the appropriate configuration of the local network used
-                for connecting to the Internet at their telework location.</li>
-            <li>Users performing telework must protect the organization&rsquo;s intellectual property rights, either for
-                software or other materials that are present on remote nodes and mobile computing equipment.</li>
+            <li>Os funcionários devem estar especificamente autorizados para o teletrabalho por escrito de seu gerente
+                de contratação.</li>
+            <li>Somente o proprietário designado pelo dispositivo tem permissão para usar nós remotos e equipamentos de
+                computação móvel.
+                Usuários não autorizados (como outros vivendo ou trabalhando no local onde o teletrabalho é realizado)
+                são
+                não é permitido usar esses dispositivos.</li>
+            <li>Os dispositivos devem ser autorizados usando certificados</li>
+            <li>Os usuários que executam o teletrabalho são responsáveis ​​pela configuração apropriada da rede local
+                usada
+                para se conectar à Internet no local do teletrabalho.</li>
+            <li>Os usuários que executam o teletrabalho devem proteger os direitos de propriedade intelectual da
+                organização, seja para
+                Software ou outros materiais presentes em nós remotos e equipamentos de computação móvel.</li>
         </ul>
     </li>
 </ul>
