--- a/app/files/base_policies/Retention.html
+++ b/app/files/base_policies/Retention.html
@@ -1,110 +1,129 @@
-<h2>Purpose and Scope</h2>
+<h2>Finalidade e âmbito</h2>
 <ul>
-    <li>This data retention policy defines the objectives and requirements for data retention within the organization.
-    </li>
-    <li>This policy covers all data within the organization&rsquo;s custody or control, regardless of the medium the
-        data is stored in (electronic form, paper form, etc.) Within this policy, the medium which holds data is
-        referred to as information, no matter what form it is in.</li>
-    <li>This policy applies to all users of information systems within the organization. This typically includes
-        employees and contractors, as well as any external parties that come into contact with systems and information
-        the organization owns or controls (hereinafter referred to as &ldquo;users&rdquo;). This policy must be made
-        readily available to all users.</li>
+    <li>Essa política de retenção de dados define os objetivos e requisitos para retenção de dados dentro da
+        organização.</li>
+    <li>Esta política abrange todos os dados sob a custódia ou controle da organização, independentemente do meio do
+        Os dados são armazenados em (formulário eletrônico, formulário de papel, etc.) dentro desta política, o meio que
+        possui dados é
+        referido como informação, não importa em que forma esteja.</li>
+    <li>Esta política se aplica a todos os usuários de sistemas de informação dentro da organização.Isso normalmente
+        inclui
+        funcionários e contratados, bem como qualquer parte externa que entre em contato com sistemas e informações
+        A organização possui ou controla (a seguir referido como "usuários").Esta política deve ser feita
+        prontamente disponível para todos os usuários.</li>
 </ul>
-<h2>Background</h2>
+<h2>Fundo</h2>
 <ul>
-    <li>The organization is bound by multiple legal, regulatory and contractual obligations with regard to the data it
-        retains. These obligations stipulate how long data can be retained, and how data must be destroyed. Examples of
-        legal, regulatory and contractual obligations include laws and regulations in the local jurisdiction where the
-        organization conducts business, and contracts made with employees, customers, service providers, partners and
-        others.</li>
-    <li>The organization may also be involved in events such as litigation or disaster recovery scenarios that require
-        it to have access to original information in order to protect the organization&rsquo;s interests or those of its
-        employees, customers, service providers, partners and others. As a result, the organization may need to archive
-        and store information for longer that it may be needed for day-to-day operations.</li>
+    <li>A organização está vinculada a múltiplas obrigações legais, regulatórias e contratuais em relação aos dados
+        retém.Essas obrigações estipulam quanto tempo os dados podem ser mantidos e como os dados devem ser
+        destruídos.Exemplos de
+        Obrigações legais, regulatórias e contratuais incluem leis e regulamentos na jurisdição local onde o
+        organização conduz negócios e contratos feitos com funcionários, clientes, provedores de serviços, parceiros e
+        outros.</li>
+    <li>A organização também pode estar envolvida em eventos como litígios ou cenários de recuperação de desastres que
+        exigem
+        para ter acesso a informações originais para proteger os interesses da organização ou os de seus
+        funcionários, clientes, provedores de serviços, parceiros e outros.Como resultado, a organização pode precisar
+        arquivar
+        e armazenar informações por mais tempo para que possam ser necessárias para operações diárias.</li>
 </ul>
-<h2>Policy</h2>
-<p><strong>Information Retention</strong></p>
+<h2>Política</h2>
+<p><strong>Retenção de informações</strong></p>
 <ul>
-    <li>Retention is defined as the maintenance of information in a production or live environment which can be accessed
-        by an authorized user in the ordinary course of business.</li>
-    <li>Information used in the development, staging, and testing of systems shall not be retained beyond their active
-        use period nor copied into production or live environments.</li>
-    <li>By default, the retention period of information shall be an active use period of exactly two years from its
-        creation unless an exception is obtained permitting a longer or shorter retention period. The business unit
-        responsible for the information must request the exception.</li>
-    <li>After the active use period of information is over in accordance with this policy and approved exceptions,
-        information must be archived for a defined period. Once the defined archive period is over, the information must
-        be destroyed.</li>
-    <li>Each business unit is responsible for the information it creates, uses, stores, processes and destroys,
-        according to the requirements of this policy. The responsible business unit is considered to be the information
-        owner.</li>
-    <li>The organization&rsquo;s legal counsel may issue a litigation hold to request that information relating to
-        potential or actual litigation, arbitration or other claims, demands, disputes or regulatory action be retained
-        in accordance with instructions from the legal counsel.</li>
-    <li>Each employee and contractor affiliated with the company must return information in their possession or control
-        to the organization upon separation and/or retirement.</li>
-    <li>Information owners must enforce the retention, archiving and destruction of information, and communicate these
-        periods to relevant parties.</li>
+    <li>A retenção é definida como a manutenção de informações em um ambiente de produção ou ao vivo que pode ser
+        acessado
+        por um usuário autorizado no curso comum dos negócios.</li>
+    <li>Informações usadas no desenvolvimento, estadiamento e teste de sistemas não devem ser mantidas além de seu ativo
+        Use o período nem copiado em ambientes de produção ou ao vivo.</li>
+    <li>Por padrão, o período de retenção de informação deve ser um período de uso ativo de exatamente dois anos de seu
+        Criação, a menos que seja obtida uma exceção permitindo um período de retenção mais longo ou menor.A unidade de
+        negócios
+        Responsável pelas informações devem solicitar a exceção.</li>
+    <li>Após o período de uso ativo, acabar de acordo com esta política e exceções aprovadas,
+        As informações devem ser arquivadas por um período definido.Uma vez que o período de arquivo definido termine, a
+        informação deve
+        seja destruido.</li>
+    <li>Cada unidade de negócios é responsável pelas informações que cria, usa, lojas, processos e destrói,
+        De acordo com os requisitos desta política.A unidade de negócios responsável é considerada a informação
+        proprietário.</li>
+    <li>O consultor jurídico da organização pode emitir um litígio para solicitar que as informações relacionadas a
+        litígios potenciais ou reais, arbitragem ou outras reivindicações, demandas, disputas ou ações regulatórias
+        sejam retidas
+        De acordo com as instruções do advogado.</li>
+    <li>Cada funcionário e contratado afiliado à empresa deve devolver informações em sua posse ou controle
+        à organização após a separação e/ou aposentadoria.</li>
+    <li>Os proprietários de informações devem fazer cumprir a retenção, arquivamento e destruição de informações e
+        comunicar esses
+        períodos para partes relevantes.</li>
 </ul>
-<p><strong>Information Archiving</strong></p>
+<p><strong>Arquivamento de informações</strong></p>
 <ul>
-    <li>Archiving is defined as secured storage of information such that the information is rendered inaccessible by
-        authorized users in the ordinary course of business but can be retrieved by an administrator designated by
-        company management.
+    <li>O arquivamento é definido como o armazenamento seguro de informações de tal forma que as informações ficam inacessíveis por
+        usuários autorizados no curso normal dos negócios, mas podem ser recuperados por um administrador designado por
+        gestão da companhia.
         <ul>
-            <li>Physical (e.g., paper) records must be archived in secured storage (onsite or offsite) and clearly
-                labeled in archive boxes naming the information owner.</li>
-            <li>Electronic records must be archived with strict access controls set by the information owner and
-                appropriate to secure the confidentiality, integrity and accessibility of the information.</li>
+            <li>Os registros físicos (por exemplo, papel) devem ser arquivados em armazenamento seguro (no local ou
+                externo) e claramente
+                rotulado em caixas de arquivo nomeando o proprietário da informação.</li>
+            <li>Os registros eletrônicos devem ser arquivados com controles rígidos de acesso definidos pelo
+                proprietário da informação e
+                apropriado para garantir a confidencialidade, integridade e acessibilidade das informações.</li>
         </ul>
     </li>
-    <li>The default archiving period of information shall be 7 years unless an approved exception permits a longer or
-        shorter period. Exceptions must be requested by the information owner.
+    <li>O período padrão de arquivamento de informações será de 7 anos, a menos que uma exceção aprovada permita um período mais longo ou
+        período mais curto. Exceções devem ser solicitadas pelo proprietário da informação.
         <ul>
-            <li>As a guideline, an archiving period of more than 7 years may be granted for information with a vital
-                historical purpose such as corporate records, contracts, and technical/trade secrets.</li>
-            <li>As a guideline, an archiving period of less than 7 years may be granted for information with a limited
-                business purpose such as email, travel itineraries, pre-trip advisories, or to comply with specific
-                legal, contractual and/or regulatory requirements (e.g., PCI DSS, GDPR, etc.)</li>
+            <li>Como diretriz, um período de arquivamento de mais de 7 anos pode ser concedido para obter informações
+                com um vital
+                Objetivo histórico, como registros corporativos, contratos e segredos técnicos/comerciais.</li>
+            <li>Como orientação, um período de arquivamento inferior a 7 anos pode ser concedido para obter informações
+                com um limitado
+                Objetivo comercial, como email, itinerários de viagem, conselhos de pré-viagem ou cumprir com
+                específicos
+                Requisitos legais, contratuais e/ou regulatórios (por exemplo, PCI DSS, GDPR, etc.)</li>
         </ul>
     </li>
-    <li>Information must be destroyed (defined below) at the end of the elapsed archiving period.</li>
+    <li>As informações devem ser destruídas (definidas abaixo) no final do período decorrido de arquivamento.</li>
 </ul>
-<p><strong>Information Destruction</strong></p>
+<p><strong>Destruição da informação</strong></p>
 <ul>
-    <li>Destruction is defined as the physical or technical destruction sufficient to render the information contained
-        in the document irretrievable by ordinary commercially-available means.</li>
-    <li>The organization must maintain and enforce a detailed list of approved destruction methods appropriate for each
-        type of information archived, whether in physical storage media such as CD-ROMs, DVDs, backup tapes, hard
-        drives, mobile devices, portable drives or in database records or backup files. Physical information in paper
-        form must be shredded using an authorized shredding device; waste must be periodically removed by approved
-        personnel.</li>
+    <li>A destruição é definida como a destruição física ou técnica suficiente para renderizar as informações contidas
+        no documento irretiável por meios comuns disponíveis comercialmente.</li>
+    <li>A organização deve manter e fazer cumprir uma lista detalhada de métodos de destruição aprovados apropriados
+        para cada
+        tipo de informação arquivada, seja em mídias de armazenamento físico, como CD-ROMs, DVDs, fitas de backup,
+        difícil
+        unidades, dispositivos móveis, unidades portáteis ou em registros de banco de dados ou arquivos de
+        backup.Informação física em papel
+        O formulário deve ser triturado usando um dispositivo de trituração autorizado;Os resíduos devem ser removidos
+        periodicamente pela aprovação
+        pessoal.</li>
 </ul>
-<p>Retention and archival periods for information that is created, processed, stored and used by the organization is
-    defined in Appendix A, &ldquo;Retention Periods.&rdquo;</p>
-<h2>Appendix A: Retention Periods</h2>
-<table style="border-collapse: collapse; width: 100%;" border="1">
+<p>Períodos de retenção e arquivo para obter informações criadas, processadas, armazenadas e usadas pela organização é
+    definido no Apêndice A, "Períodos de Retenção".</p>
+<h2>Apêndice A: Períodos de retenção</h2>
+<table border="1" style="border-collapse: collapse; width: 100%;">
     <colgroup>
-        <col style="width: 20%;">
-        <col style="width: 20%;">
-        <col style="width: 20%;">
-        <col style="width: 20%;">
-        <col style="width: 20%;">
+        <col style="width: 20%;" />
+        <col style="width: 20%;" />
+        <col style="width: 20%;" />
+        <col style="width: 20%;" />
+        <col style="width: 20%;" />
     </colgroup>
     <tbody>
         <tr>
-            <td>Information Type</td>
-            <td>Information Owner</td>
-            <td>Storage Location</td>
-            <td>Retention Period</td>
-            <td>Archival Period</td>
+            <td>Tipo de informação</td>
+            <td>Proprietário da informação</td>
+            <td>Local de armazenamento</td>
+            <td>Período de retenção</td>
+            <td>Período de arquivo</td>
         </tr>
         <tr>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td> </td>
+            <td> </td>
+            <td> </td>
+            <td> </td>
+            <td> </td>
         </tr>
     </tbody>
 </table>
