--- a/app/files/base_policies/Risk.html
+++ b/app/files/base_policies/Risk.html
@@ -1,133 +1,169 @@
-<h2>Purpose and Scope</h2>
+<h2>Finalidade e âmbito</h2>
 <ul>
-    <li>The purpose of this policy is to define the methodology for the assessment and treatment of information security
-        risks within the organization, and to define the acceptable level of risk as set by the organization&rsquo;s
-        leadership.</li>
-    <li>Risk assessment and risk treatment are applied to the entire scope of the organization&rsquo;s information
-        security program, and to all assets which are used within the organization or which could have an impact on
-        information security within it.</li>
-    <li>This policy applies to all employees of the organization who take part in risk assessment and risk treatment.
-    </li>
+    <li>O objetivo desta política é definir a metodologia para a avaliação e tratamento da segurança da informação
+        riscos dentro da organização e para definir o nível aceitável de risco definido pela organização
+        liderança.</li>
+    <li>Avaliação de risco e tratamento de risco são aplicados a todo o escopo das informações da organização
+        programa de segurança e para todos os ativos que são usados ​​na organização ou que podem ter um impacto
+        em
+        segurança da informação dentro dela.</li>
+    <li>Esta política se aplica a todos os funcionários da organização que participam de avaliação e tratamento de
+        risco.</li>
 </ul>
-<h2>Background</h2>
+<h2>Fundo</h2>
 <ul>
-    <li>A key element of the organization&rsquo;s information security program is a holistic and systematic approach to
-        risk management. This policy defines the requirements and processes for the organization to identify information
-        security risks. The process consists of four parts: identification of the organization&rsquo;s assets, as well
-        as the threats and vulnerabilities that apply; assessment of the likelihood and consequence (risk) of the
-        threats and vulnerabilities being realized, identification of treatment for each unacceptable risk, and
-        evaluation of the residual risk after treatment.</li>
+    <li>Um elemento -chave do programa de segurança da informação da organização é uma abordagem holística e
+        sistemática para
+        gerenciamento de riscos.Esta política define os requisitos e processos para a organização identificar
+        informações
+        riscos de segurança.O processo consiste em quatro partes: identificação dos ativos da organização também
+        como as ameaças e vulnerabilidades que se aplicam;avaliação da probabilidade e consequência (risco) do
+        Ameaças e vulnerabilidades sendo realizadas, identificação do tratamento para cada risco inaceitável e
+        Avaliação do risco residual após o tratamento.</li>
 </ul>
-<h2>References</h2>
+<h2>Referências</h2>
 <ul>
-    <li>Risk Assessment Report Template</li>
+    <li>Modelo de relatório de avaliação de risco</li>
 </ul>
-<h2>Policy</h2>
+<h2>Política</h2>
 <ul>
-    <li>Risk Assessment
+    <li>Avaliação de Risco
         <ul>
-            <li>The risk assessment process includes the identification of threats and vulnerabilities having to do with
-                company assets.</li>
-            <li>The first step in the risk assessment is to identify all assets within the scope of the information
-                security program; in other words, all assets which may affect the confidentiality, integrity, and/or
-                availability of information in the organization. Assets may include documents in paper or electronic
-                form, applications, databases, information technology equipment, infrastructure, and external/outsourced
-                services and processes. For each asset, an owner must be identified.</li>
-            <li>The next step is to identify all threats and vulnerabilities associated with each asset. Threats and
-                vulnerabilities must be listed in a risk assessment table. Each asset may be associated with multiple
-                threats, and each threat may be associated with multiple vulnerabilities. A sample risk assessment table
-                is provided as part of the Risk Assessment Report Template (reference (a)).</li>
-            <li>For each risk, an owner must be identified. The risk owner and the asset owner may be the same
-                individual.</li>
-            <li>Once risk owners are identified, they must assess:
+            <li>O processo de avaliação de risco inclui a identificação de ameaças e vulnerabilidades
+                relacionadas a ver com
+                ativos da empresa.</li>
+            <li>O primeiro passo na avaliação de risco é identificar todos os ativos dentro do escopo da
+                informação
+                programa de segurança;Em outras palavras, todos os ativos que podem afetar a
+                confidencialidade, integridade e/ou
+                Disponibilidade de informações na organização.Os ativos podem incluir documentos em
+                papel ou eletrônico
+                formulário, aplicações, bancos de dados, equipamentos de tecnologia da informação,
+                infraestrutura e externo/terceirizado
+                Serviços e processos.Para cada ativo, um proprietário deve ser identificado.</li>
+            <li>O próximo passo é identificar todas as ameaças e vulnerabilidades associadas a cada
+                ativo.Ameaças e
+                As vulnerabilidades devem ser listadas em uma tabela de avaliação de risco.Cada ativo
+                pode estar associado a múltiplos
+                Ameaças e cada ameaça podem estar associadas a várias vulnerabilidades.Uma tabela de
+                avaliação de risco de amostra
+                é fornecido como parte do modelo de relatório de avaliação de risco (referência (a)).
+            </li>
+            <li>Para cada risco, um proprietário deve ser identificado.O proprietário do risco e o
+                proprietário do ativo podem ser os mesmos
+                Individual.</li>
+            <li>Uma vez identificados os proprietários dos riscos, eles devem avaliar:
                 <ul>
-                    <li>Consequences for each combination of threats and vulnerabilities for an individual asset if such
-                        a risk materializes.</li>
-                    <li>Likelihood of occurrence of such a risk (i.e. the probability that a threat will exploit the
-                        vulnerability of the respective asset).</li>
-                    <li>Criteria for determining consequence and likelihood are defined in Tables 3 and 4.</li>
+                    <li>Consequências para cada combinação de ameaças e vulnerabilidades para um
+                        ativo individual se tais
+                        um risco se materializa.</li>
+                    <li>Probabilidade de ocorrência de tal risco (ou seja, a probabilidade de uma
+                        ameaça explorar o
+                        vulnerabilidade do respectivo ativo).</li>
+                    <li>Os critérios para determinar a consequência e a probabilidade são definidos
+                        nas Tabelas 3 e 4.</li>
                 </ul>
             </li>
-            <li>The risk level is calculated by adding the consequence score and the likelihood score.</li>
+            <li>O nível de risco é calculado adicionando a pontuação de consequência e a pontuação de
+                probabilidade.</li>
         </ul>
     </li>
 </ul>
-<table style="border-collapse: collapse; width: 100%; height: 252px;" border="1">
+<table border="1" style="border-collapse: collapse; width: 100%; height: 252px;">
     <colgroup>
-        <col style="width: 33.3333%;">
-        <col style="width: 33.3333%;">
-        <col style="width: 33.3333%;">
+        <col style="width: 33.3333%;" />
+        <col style="width: 33.3333%;" />
+        <col style="width: 33.3333%;" />
     </colgroup>
     <tbody>
         <tr style="height: 18px;">
-            <td style="height: 18px;">Consequence Level</td>
-            <td style="height: 18px;">Consequence Score</td>
-            <td style="height: 18px;">Description</td>
+            <td style="height: 18px;">Nível de consequência</td>
+            <td style="height: 18px;">Score de consequência</td>
+            <td style="height: 18px;">Descrição</td>
         </tr>
         <tr style="height: 72px;">
-            <td style="height: 72px;">Low</td>
+            <td style="height: 72px;">Baixo</td>
             <td style="height: 72px;">0</td>
-            <td style="height: 72px;">Loss of confidentiality, integrity, or availability will not affect the
-                organization's cash flow, legal, or contractual obligations, or reputation</td>
+            <td style="height: 72px;">A perda de confidencialidade, integridade ou disponibilidade não
+                afetará o
+                Fluxo de caixa da organização, obrigações legais ou contratuais ou reputação</td>
         </tr>
         <tr style="height: 90px;">
-            <td style="height: 90px;">Moderate</td>
+            <td style="height: 90px;">Moderado</td>
             <td style="height: 90px;">1</td>
-            <td style="height: 90px;">Loss of confidentiality, integrity, or availability may incur financial cost and
-                has low or moderate impact on the organization's legal or contractual obligations and/or reputation</td>
+            <td style="height: 90px;">A perda de confidencialidade, integridade ou disponibilidade pode
+                incorrer em custos financeiros e
+                tem um impacto baixo ou moderado nas obrigações legais ou contratuais da organização
+                e/ou reputação</td>
         </tr>
         <tr style="height: 72px;">
-            <td style="height: 72px;">High</td>
+            <td style="height: 72px;">Alto</td>
             <td style="height: 72px;">2</td>
-            <td style="height: 72px;">Loss of confidentiality, integrity, or availability will have immediate and
-                or/considerable impact on the organization's cash flow, operations, legal and contractual
-                obligations,and/or reputation&nbsp;</td>
+            <td style="height: 72px;">Perda de confidencialidade, integridade ou disponibilidade terá
+                imediato e
+                ou//considerável impacto no fluxo de caixa da organização, operações, legal e contratual
+                obrigações e/ou reputação</td>
         </tr>
     </tbody>
 </table>
-<p>Risk Acceptance Criteria</p>
+<p>Critérios de aceitação de risco</p>
 <ul>
     <li style="list-style-type: none;">
         <ul>
-            <li>Risk values 0 through 2 are considered to be acceptable risks.</li>
-            <li>Risk values 3 and 4 are considered to be unacceptable risks. Unacceptable risks must be treated.</li>
+            <li>Os valores de risco 0 a 2 são considerados riscos aceitáveis.</li>
+            <li>Os valores de risco 3 e 4 são considerados riscos inaceitáveis.Riscos inaceitáveis ​​devem
+                ser tratados.</li>
         </ul>
     </li>
-    <li>Risk Treatment
+    <li>Tratamento de Risco
         <ul>
-            <li>Risk treatment is implemented through the Risk Treatment Table. All risks from the Risk Assessment Table
-                must be copied to the Risk Treatment Table for disposition, along with treatment options and residual
-                risk. A sample Risk Treatment Table is provided in reference (a).</li>
-            <li>As part of this risk treatment process, the CEO and/or other company managers shall determine objectives
-                for mitigating or treating risks. All unacceptable risks must be treated. For continuous improvement
-                purposes, company managers may also opt to treat other risks for company assets, even if their risk
-                score is deemed to be acceptable.</li>
-            <li>Treatment options for risks include the following options:
+            <li>O tratamento de risco é implementado através da tabela de tratamento de risco.Todos os
+                riscos da tabela de avaliação de risco
+                deve ser copiado para a tabela de tratamento de risco para disposição, juntamente com
+                opções de tratamento e residual
+                risco.Uma tabela de tratamento de risco de amostra é fornecida em referência (a).</li>
+            <li>Como parte desse processo de tratamento de risco, o CEO e/ou outros gerentes de empresa
+                devem determinar os objetivos
+                para mitigar ou tratar riscos.Todos os riscos inaceitáveis ​​devem ser tratados.Para
+                melhoria contínua
+                Fins, os gerentes da empresa também podem optar por tratar outros riscos de ativos da
+                empresa, mesmo que seu risco
+                A pontuação é considerada aceitável.</li>
+            <li>As opções de tratamento para riscos incluem as seguintes opções:
                 <ul>
-                    <li>Selection or development of security control(s).</li>
-                    <li>Transferring the risks to a third party; for example, by purchasing an insurance policy or
-                        signing a contract with suppliers or partners.</li>
-                    <li>Avoiding the risk by discontinuing the business activity that causes such risk.</li>
-                    <li>Accepting the risk; this option is permitted only if the selection of other risk treatment
-                        options would cost more than the potential impact of the risk being realized.</li>
+                    <li>Seleção ou desenvolvimento de controle (s) de segurança.</li>
+                    <li>Transferir os riscos para terceiros;por exemplo, comprando uma apólice de
+                        seguro ou
+                        assinando um contrato com fornecedores ou parceiros.</li>
+                    <li>Evitando o risco interrompendo a atividade comercial que causa esse risco.
+                    </li>
+                    <li>Aceitar o risco;Esta opção é permitida apenas se a seleção de outro
+                        tratamento de risco
+                        As opções custariam mais do que o impacto potencial do risco que está
+                        sendo realizado.</li>
                 </ul>
             </li>
-            <li>After selecting a treatment option, the risk owner should estimate the new consequence and likelihood
-                values after the planned controls are implemented.</li>
+            <li>Depois de selecionar uma opção de tratamento, o proprietário do risco deve estimar a nova
+                consequência e a probabilidade
+                Os valores após os controles planejados são implementados.</li>
         </ul>
     </li>
-    <li>Regular Reviews of Risk Assessment and Risk Treatment
+    <li>Revisões regulares de avaliação de riscos e tratamento de riscos
         <ul>
-            <li>The Risk Assessment Table and Risk Treatment Table must be updated when newly identified risks are
-                identified. At a minimum, this update and review shall be conducted once per year. It is highly
-                recommended that the Risk Assessment and Risk Treatment Table be updated when significant changes occur
-                to the organization, technology, business objectives, or business environment.</li>
+            <li>A tabela de avaliação de risco e a tabela de tratamento de risco devem ser atualizados
+                quando os riscos recém -identificados são
+                identificado.No mínimo, esta atualização e revisão serão realizadas uma vez por ano.É
+                muito
+                recomendou que a avaliação de risco e a tabela de tratamento de risco fossem atualizados
+                quando ocorrem mudanças significativas
+                para a organização, tecnologia, objetivos de negócios ou ambiente de negócios.</li>
         </ul>
     </li>
-    <li>Reporting
+    <li>Comunicando
         <ul>
-            <li>The results of risk assessment and risk treatment, and all subsequent reviews, shall be documented in a
-                Risk Assessment Report.</li>
+            <li>Os resultados da avaliação de risco e tratamento de risco, e todas as revisões subsequentes,
+                devem ser documentadas em um
+                Relatório de avaliação de risco.</li>
         </ul>
     </li>
 </ul>
