--- a/app/files/about_frameworks/cisv8.html
+++ b/app/files/about_frameworks/cisv8.html
@@ -1,21 +1,21 @@
 <div class="p-4 text-sm">
-  <h2 class="my-4 text-xl font-semibold">About CSC CIS 18</h2>
+  <h2 class="my-4 text-xl font-semibold">Sobre o CSC CIS 18</h2>
 
   <p class="mb-2">
-    The Critical Security Controls (CIS 18) are a set of cybersecurity best practices developed by the Center for
-    Internet Security (CIS). The controls are intended to be used by organizations to protect their information systems
-    and networks from cyber-attacks. The 18 controls are organized into three categories: Basic, Foundational, and
-    Organizational. The Basic controls focus on essential security measures such as patch management, secure
-    configurations, and access control. The Foundational controls are more comprehensive, covering topics such as
-    vulnerability management, data protection, and incident response. The Organizational controls are designed to help
-    organizations develop a culture of security, with topics such as security awareness training and security policy
-    development. The CIS 18 provides organizations with an actionable checklist of security best practices to help
-    ensure the security of their networks.
+    Os Controles Críticos de Segurança (CIS 18) são um conjunto de melhores práticas de segurança cibernética desenvolvido pelo Center for
+    Segurança da Internet (CIS). Os controles destinam-se a ser usados ​​pelas organizações para proteger seus sistemas de informação
+    e redes contra ataques cibernéticos. Os 18 controles são organizados em três categorias: Básico, Fundamental e
+    Organizacional. Os controles Básicos concentram-se em medidas de segurança essenciais, como gerenciamento de patches, segurança
+    configurações e controle de acesso. Os controles Fundamentais são mais abrangentes, abrangendo tópicos como
+    gerenciamento de vulnerabilidades, proteção de dados e resposta a incidentes. Os controles organizacionais são projetados para ajudar
+    as organizações desenvolvem uma cultura de segurança, com tópicos como treinamento de conscientização de segurança e política de segurança
+    desenvolvimento. O CIS 18 fornece às organizações uma lista de verificação prática das melhores práticas de segurança para ajudar
+    garantir a segurança de suas redes.
   </p>
   <p class="mb-2">
 
-  <h2 class="my-4 text-xl font-semibold">Vendor Recommendations</h2>
+  <h2 class="my-4 text-xl font-semibold">Recomendações dos Fornecedores</h2>
   <p class="mb-2">
-    Coming Soon!
+    Em breve!
   </p>
 </div>
