--- a/app/files/about_frameworks/custom.html
+++ b/app/files/about_frameworks/custom.html
@@ -1,6 +1,6 @@
 <div class="p-4 text-sm">
-  <h2 class="my-4 text-xl font-semibold">Custom Framework</h2>
+  <h2 class="my-4 text-xl font-semibold">Framework Customizável</h2>
   <p class="mb-2">
-    Empty framework that allows you to create your own.
+    Framework vazio que permite criar a sua própria.
   </p>
 </div>
