--- a/app/files/about_frameworks/iso27001.html
+++ b/app/files/about_frameworks/iso27001.html
@@ -1,37 +1,36 @@
 <div class="p-4 text-sm">
-  <h2 class="my-4 text-xl font-semibold">About ISO27001</h2>
+  <h2 class="my-4 text-xl font-semibold">Sobre a ISO27001</h2>
 
   <p class="mb-2">
-    The International Organization for Standardization (ISO) also has a security framework known as ISO 27001. This
-    framework is designed to help organizations protect the confidentiality, integrity, and availability of their
-    information assets. The framework is composed of fourteen domains that cover a wide range of security topics. These
-    include:
+    A Organização Internacional de Padronização (ISO) também possui uma estrutura de segurança conhecida como ISO 27001. Esta
+    estrutura foi projetada para ajudar as organizações a proteger a confidencialidade, integridade e disponibilidade de seus
+    ativos de informação. A estrutura é composta por quatorze domínios que cobrem uma ampla gama de tópicos de segurança. Esses
+    incluir:
   <ul class="list-disc px-8 mb-4">
-    <li>Risk management</li>
-    <li>Access control</li>
-    <li>Physical security</li>
-    <li>Business continuity</li>
-    <li>Cryptography</li>
-
+    <li>Gerenciamento de riscos</li>
+    <li>Controle de acesso</li>
+    <li>Segurança física</li>
+    <li>Continuidade dos negócios</li>
+    <li>Criptografia</li>
   </ul>
 
   </p>
   <p class="mb-2">
 
-    The ISO 27001 framework is designed to help organizations identify, assess, and manage risks to their information
-    assets. It also provides guidance on how to develop and implement effective security controls. By following the ISO
-    27001 framework, organizations can ensure that their information is protected and secure.
+    A estrutura ISO 27001 foi projetada para ajudar as organizações a identificar, avaliar e gerenciar riscos para suas informações
+    ativos. Também fornece orientação sobre como desenvolver e implementar controles de segurança eficazes. Seguindo a ISO
+    27001, as organizações podem garantir que suas informações estejam protegidas e seguras.
   </p>
   <p class="mb-2">
 
-    In conclusion, the HIPAA security framework and the ISO 27001 framework are both important sets of guidelines for
-    organizations that handle PHI or sensitive information. The HIPAA security framework provides guidance on how to
-    protect the privacy of individuals, while the ISO 27001 framework provides guidance on how to secure information
-    assets. By following these guidelines, organizations can ensure the safety and security of their information.
+    Concluindo, a estrutura de segurança HIPAA e a estrutura ISO 27001 são conjuntos importantes de diretrizes para
+    organizações que lidam com PHI ou informações confidenciais. A estrutura de segurança HIPAA fornece orientação sobre como
+    proteger a privacidade dos indivíduos, enquanto a estrutura ISO 27001 fornece orientação sobre como proteger as informações
+    ativos. Seguindo essas diretrizes, as organizações podem garantir a segurança de suas informações.
   </p>
 
-  <h2 class="my-4 text-xl font-semibold">Vendor Recommendations</h2>
+  <h2 class="my-4 text-xl font-semibold">Recomendações dos Fornecedores</h2>
   <p class="mb-2">
-    Coming Soon!
+    Em Breve!
   </p>
 </div>
