--- a/app/files/base_policies/Change.html
+++ b/app/files/base_policies/Change.html
@@ -1,43 +1,52 @@
-<h2>Purpose and Scope</h2>
+<h2>Finalidade e âmbito</h2>
 <ul>
-    <li>This information security policy defines how changes to information systems are planned and implemented</li>
-    <li>This policy applies to the entire information security program at the organization (i.e. to all information and
-        communications technology, as well as related documentation).</li>
-    <li>All employees, contractors, part-time and temporary workers, service providers, and those employed by others to
-        perform work for the organization, or who have been granted to the organization&rsquo;s information and
-        communications technology, must comply with this policy.</li>
+    <li>Esta política de segurança da informação define como as mudanças nos sistemas de informação são planejadas e
+        implementadas</li>
+    <li>Esta política se aplica a todo o programa de segurança da informação na organização (ou seja, a todas as
+        informações e
+        tecnologia de comunicação, bem como documentação relacionada).</li>
+    <li>Todos os funcionários, contratados, trabalhadores de meio período e temporários, prestadores de serviços e
+        aqueles empregados por outros para
+        realizar trabalhos para a organização, ou que foram concedidos às informações da organização e
+        A tecnologia de comunicação deve cumprir esta política.</li>
 </ul>
-<h2>Background</h2>
+<h2>Fundo</h2>
 <ul>
-    <li>This policy defines specific requirements to ensure that changes to systems and applications are properly
-        planned, evaluated, reviewed, approved, communicated, implemented, documented, and reviewed, thereby ensuring
-        the greatest probability of success. Where changes are not successful, this document provides mechanisms for
-        conducting post-implementation review such that future mistakes and errors can be prevented.</li>
+    <li>Esta política define requisitos específicos para garantir que as alterações nos sistemas e aplicações sejam
+        adequadamente
+        planejado, avaliado, revisado, aprovado, comunicado, implementado, documentado e revisado, garantindo assim
+        a maior probabilidade de sucesso.Onde as mudanças não são bem -sucedidas, este documento fornece mecanismos para
+        Revisão de pós-implementação, de modo que erros e erros futuros possam ser evitados.</li>
 </ul>
-<h2>Policy</h2>
+<h2>Política</h2>
 <ul>
-    <li>Any changes to the security architecture or customer data handling of a system must be formally requested in
-        writing to the organization&rsquo;s Information Security Manager (ISM), and approved by the ISM and the Chief
-        Information Officer (CIO).</li>
-    <li>All change requests must be documented.</li>
-    <li>All change requests must be prioritized in terms of benefits, urgency, effort required, and potential impacts to
-        the organization&rsquo;s operations.</li>
-    <li>All implemented changes must be communicated to relevant users.</li>
-    <li>Change management must be conducted according to the following procedure:
+    <li>Quaisquer alterações na arquitetura de segurança ou no manuseio de dados do cliente de um sistema devem ser
+        formalmente solicitadas em
+        Escrevendo para o gerente de segurança da informação da organização (ISM) e aprovado pelo ISM e pelo chefe
+        Oficial de Informações (CIO).</li>
+    <li>Todas as solicitações de mudança devem ser documentadas.</li>
+    <li>Todas as solicitações de mudança devem ser priorizadas em termos de benefícios, urgência, esforço necessário e
+        impactos potenciais para
+        as operações da organização.</li>
+    <li>Todas as alterações implementadas devem ser comunicadas aos usuários relevantes.</li>
+    <li>O gerenciamento de mudanças deve ser conduzido de acordo com o seguinte procedimento:
         <ul>
-            <li>Planning: plan the change, including the implementation design, scheduling, and implementation of a
-                communications plan, testing plan, and roll-back plan.</li>
-            <li>Evaluation: evaluate the change, including priority level of the service and risk that the proposed
-                change introduces to the system; determine the change type and the specific step-by-step process to
-                implement the change.</li>
-            <li>Review: review the change plan amongst the CIO, ISM, Engineering Lead, and, if applicable, Business Unit
-                Manager.</li>
-            <li>Approval: the CIO must approve the change plan.</li>
-            <li>Communication: communicate the change to all users of the system.</li>
-            <li>Implementation: test and implement the change.</li>
-            <li>Documentation: record the change and any post-implementation issues.</li>
-            <li>Post-change review: conduct a post-implementation review to determine how the change is impacting the
-                organization, either positively or negatively. Discuss and document any lessons learned.</li>
+            <li>Planejamento: planeje a mudança, incluindo o design da implementação, agendamento e implementação de um
+                Plano de Comunicações, Plano de Teste e Plano de Roll-Back.</li>
+            <li>Avaliação: Avalie a mudança, incluindo o nível de prioridade do serviço e o risco de que o proposto
+                A mudança é introduzida no sistema;determinar o tipo de mudança e o processo passo a passo específico
+                para
+                implementar a mudança.</li>
+            <li>Revisão: Revise o Plano de Mudança entre o CIO, ISM, Líder de Engenharia e, se aplicável, Unidade de
+                Negócios
+                Gerente.</li>
+            <li>Aprovação: O CIO deve aprovar o plano de mudança.</li>
+            <li>Comunicação: comunique a alteração a todos os usuários do sistema.</li>
+            <li>Implementação: teste e implemente a mudança.</li>
+            <li>Documentação: Registre a mudança e quaisquer problemas de pós-implementação.</li>
+            <li>Revisão pós-mudança: realizar uma revisão pós-implementação para determinar como a mudança está afetando
+                o
+                organização, positiva ou negativa.Discuta e documente quaisquer lições aprendidas.</li>
         </ul>
     </li>
 </ul>
