--- a/app/files/base_policies/Disaster.html
+++ b/app/files/base_policies/Disaster.html
@@ -1,195 +1,216 @@
-<h2>Purpose and Scope</h2>
+<h2>Finalidade e âmbito</h2>
 <ul>
-    <li>The purpose of this policy is to define the organization&rsquo;s procedures to recover Information Technology
-        (IT) infrastructure and IT services within set deadlines in the case of a disaster or other disruptive incident.
-        The objective of this plan is to complete the recovery of IT infrastructure and IT services within a set
-        Recovery Time Objective (RTO).</li>
-    <li>This policy includes all resources and processes necessary for service and data recovery, and covers all
-        information security aspects of business continuity management.</li>
-    <li>This policy applies to all management, employees and suppliers that are involved in the recovery of IT
-        infrastructure and services within the organization. This policy must be made readily available to all whom it
-        applies to.</li>
+    <li>O objetivo desta política é definir os procedimentos da organização para recuperar a tecnologia da informação
+        (TI) Infraestrutura e serviços de TI dentro de prazos definidos no caso de um desastre ou outro incidente
+        disruptivo.
+        O objetivo deste plano é concluir a recuperação da infraestrutura de TI e os serviços de TI em um conjunto
+        Objetivo do tempo de recuperação (RTO).</li>
+    <li>Esta política inclui todos os recursos e processos necessários para o serviço e recuperação de dados e abrange
+        todos
+        Aspectos de segurança da informação do gerenciamento de continuidade de negócios.</li>
+    <li>Esta política se aplica a toda a gerência, funcionários e fornecedores envolvidos na recuperação dela
+        infraestrutura e serviços dentro da organização.Esta política deve ser disponibilizada prontamente para todos os
+        quais
+        aplica-se a.</li>
 </ul>
-<h2>Background</h2>
+<h2>Fundo</h2>
 <ul>
-    <li>This policy defines the overall disaster recovery strategy for the organization. The strategy describes the
-        organization&rsquo;s Recovery Time Objective (RTO), which is defined as the duration of time and service level
-        for critical business processes to be restored after a disaster or other disruptive event, as well as the
-        procedures, responsibility and technical guidance required to meet the RTO. This policy also lists the contact
-        information for personnel and service providers that may be needed during a disaster recovery event.</li>
-    <li>The following conditions must be met for this plan to be viable:
+    <li>Esta política define a estratégia geral de recuperação de desastres para a organização.A estratégia descreve o
+        O objetivo
+        para que os processos de negócios críticos sejam restaurados após um desastre ou outro evento disruptivo, bem
+        como o
+        Procedimentos, responsabilidade e orientação técnica necessária para atender à RTO.Esta política também lista o
+        contato
+        Informações para fornecedores de pessoal e serviços que podem ser necessários durante um evento de recuperação
+        de desastres.</li>
+    <li>As seguintes condições devem ser atendidas para que este plano seja viável:
         <ul>
-            <li>All equipment, software and data (or their backups/failovers) are available in some manner.</li>
-            <li>If an incident takes place at the organization&rsquo;s physical location, all resources involved in
-                recovery efforts are able to be transferred to an alternate work site (such as their home office) to
-                complete their duties.</li>
-            <li>The Information Security Officer is responsible for coordinating and conducting a bi-annual (at least)
-                rehearsal of this continuity plan.</li>
+            <li>Todos os equipamentos, software e dados (ou seus backups/failover) estão disponíveis de alguma maneira.
+            </li>
+            <li>Se um incidente ocorrer na localização física da organização, todos os recursos envolvidos em
+                Os esforços de recuperação podem ser transferidos para um local de trabalho alternativo (como seu
+                escritório em casa) para
+                completar seus deveres.</li>
+            <li>O Oficial de Segurança da Informação é responsável por coordenar e conduzir um bienual (pelo menos)
+                ensaio deste plano de continuidade.</li>
         </ul>
     </li>
-    <li>This plan does not cover the following types of incidents:
+    <li>Este plano não cobre os seguintes tipos de incidentes:
         <ul>
-            <li>Incidents that affect customers or partners but have no effect on the organization&rsquo;s systems; in
-                this case, the customer must employ their own continuity processes to make sure that they can continue
-                to interact with the organization and its systems.</li>
-            <li>Incidents that affect cloud infrastructure suppliers at the core infrastructure level, including but not
-                limited to Google, Heroku, and Amazon Web Services. The organization depends on such suppliers to employ
-                their own continuity processes.</li>
+            <li>Incidentes que afetam clientes ou parceiros, mas não têm efeito nos sistemas da organização;em
+                Nesse caso, o cliente deve empregar seus próprios processos de continuidade para garantir que eles
+                possam continuar
+                interagir com a organização e seus sistemas.</li>
+            <li>Incidentes que afetam os fornecedores de infraestrutura em nuvem no nível principal de infraestrutura,
+                incluindo, mas não
+                Limitado ao Google, Heroku e Amazon Web Services.A organização depende de tais fornecedores para
+                empregar
+                seus próprios processos de continuidade.</li>
         </ul>
     </li>
 </ul>
-<h2>Policy</h2>
+<h2>Política</h2>
 <ul>
-    <li>Relocation
+    <li>Realocação
         <ul>
-            <li>If the organization&rsquo;s primary work site is unavailable, an alternate work site shall be used by
-                designated personnel. The organization&rsquo;s alternate work site is located at [list the address of
-                the alternate work site that the organization will use].</li>
-            <li>The personnel required to report to the alternate work site during a disaster includes [list the
-                personnel titles responsible for reporting to the alternate work site].</li>
+            <li>Se o principal local de trabalho da organização não estiver disponível, um local de trabalho alternativo
+                deve ser usado por
+                pessoal designado.O local de trabalho alternativo da organização está localizado em [Liste o endereço de
+                o local de trabalho alternativo que a organização usará].</li>
+            <li>O pessoal necessário para se reportar ao local de trabalho alternativo durante um desastre inclui
+                [listar o
+                Títulos de pessoal responsáveis ​​por reportar ao local de trabalho alternativo].</li>
         </ul>
     </li>
-    <li>Critical Services, Key Tasks and, Service Level Agreements (SLAs)
+    <li>Serviços críticos, tarefas principais e acordos de nível de serviço (SLAs)
         <ul>
-            <li>The following services and technologies are considered to be critical for business operations, and must
-                immediately be restored (in priority order):
+            <li>Os seguintes serviços e tecnologias são considerados críticos para as operações comerciais e devem
+                ser imediatamente restaurado (em ordem de prioridade):
                 <ul>
-                    <li>[list the critical services and technologies that must remain running during a disaster]</li>
+                    <li>[Liste os serviços e tecnologias críticas que devem permanecer em execução durante um desastre]
+                    </li>
                 </ul>
             </li>
-            <li>The following key tasks and SLAs must be considered during a disaster recovery event, in accordance with
-                the organization&rsquo;s objectives, agreements, and legal, contractual or regulatory obligations:
+            <li>As seguintes tarefas principais e SLAs devem ser considerados durante um evento de recuperação de
+                desastres, de acordo com
+                os objetivos, acordos e obrigações legais, contratuais ou regulatórias da organização:
                 <ul>
-                    <li>[list of key tasks / SLAs that must be kept operational, with respective deadlines]</li>
-                </ul>
-            </li>
-        </ul>
-    </li>
-    <li>The organization&rsquo;s Recovery Time Objective (RTO) is [set the maximum amount of time before critical
-        processes must be restored, to include relocation and getting critical services/technologies back online].
-        Relocation and restoration of critical services and technologies must be completed within this time period.</li>
-    <li>Notification of Plan Initiation
-        <ul>
-            <li>The following personnel must be notified when this plan is initiated:
-                <ul>
-                    <li>[list all personnel (including titles) that must be notified of plan initiation ]</li>
-                </ul>
-            </li>
-            <li>[person responsible for notifications, including title] is responsible for notifying the personnel
-                listed above.</li>
-        </ul>
-    </li>
-    <li>Plan Deactivation
-        <ul>
-            <li>This plan must only be deactivated by [person or persons with authority to deactivate the plan,
-                including job title].</li>
-            <li>In order for this plan to be deactivated, all relocation activities and critical service / technology
-                tasks &nbsp;as detailed above must be fully completed and/or restored. If the organization is still
-                operating in an impaired scenario, the plan may still be kept active at the discretion of [person or
-                persons with authority to deactivate the plan, including job title].</li>
-            <li>The following personnel must be notified when this plan is deactivated:
-                <ul>
-                    <li>[list all personnel (including titles) that must be notified of plan activation]</li>
+                    <li>[Lista de tarefas principais / SLAs que devem ser mantidas operacionais, com os respectivos
+                        prazos]</li>
                 </ul>
             </li>
         </ul>
     </li>
-    <li>The organization must endeavor to restore its normal level of business operations as soon as possible.</li>
-    <li>A list of relevant points of contact both internal and external to the organization is enclosed in Appendix A.
-    </li>
-    <li>During a crisis, it is vital for certain recovery tasks to be performed right away. The following actions are
-        pre-authorized in the event of a disaster recovery event:
+    <li>O objetivo do tempo de recuperação da organização (RTO) é [defina a quantidade máxima de tempo antes da crítica
+        Os processos devem ser restaurados, para incluir a realocação e obter serviços/tecnologias críticas novamente on
+        -line].
+        A realocação e restauração de serviços e tecnologias críticas devem ser concluídas neste período.</li>
+    <li>Notificação de início do plano
         <ul>
-            <li>[job title] must take all steps specified in this disaster recovery plan in order to recover the
-                organization&rsquo;s information technology infrastructure and services.</li>
-            <li>[job title] is authorized to make urgent purchases of equipment and services up to [amount].</li>
-            <li>[job title] is authorized to communicate with clients.</li>
-            <li>[job title] is authorized to communicate with the public.</li>
-            <li>[job title] is authorized to communicate with public authorities such as state and local governments and
-                law enforcement.</li>
-            <li>[job title] is authorized to cooperate with [name of supplier/outsourcing partner].</li>
-            <li>[add/modify/remove authorizations in this section as necessary]</li>
+            <li>O seguinte pessoal deve ser notificado quando este plano for iniciado:
+                <ul>
+                    <li>[Liste todo o pessoal (incluindo títulos) que devem ser notificados da iniciação do plano]</li>
+                </ul>
+            </li>
+            <li>[Pessoa responsável pelas notificações, incluindo o título] é responsável por notificar o pessoal
+                listado acima.</li>
         </ul>
     </li>
-    <li>Specific recovery steps for information systems infrastructure and services are provided in Appendix B.</li>
+    <li>Desativação do plano
+        <ul>
+            <li>Este plano deve ser desativado apenas por [pessoa ou pessoas com autoridade para desativar o plano,
+                incluindo cargo].</li>
+            <li>Para que este plano seja desativado, todas as atividades de realocação e serviço crítico / tecnologia
+                As tarefas detalhadas acima devem ser totalmente concluídas e/ou restauradas.Se a organização ainda
+                estiver
+                Operando em um cenário prejudicado, o plano ainda pode ser mantido ativo a critério de [pessoa ou
+                pessoas com autoridade para desativar o plano, incluindo o cargo].</li>
+            <li>O seguinte pessoal deve ser notificado quando este plano for desativado:
+                <ul>
+                    <li>[Liste todo o pessoal (incluindo títulos) que devem ser notificados da ativação do plano]</li>
+                </ul>
+            </li>
+        </ul>
+    </li>
+    <li>A organização deve se esforçar para restaurar seu nível normal de operações comerciais o mais rápido possível.
+    </li>
+    <li>Uma lista de pontos de contato relevantes internos e externos à organização é anexada no Apêndice A.</li>
+    <li>Durante uma crise, é vital que determinadas tarefas de recuperação sejam executadas imediatamente. As seguintes
+        ações são
+        pré-autorizado em caso de evento de recuperação de desastre:
+        <ul>
+            <li>[o cargo] deve tomar todas as medidas especificadas neste plano de recuperação de desastres para
+                recuperar o
+                Infraestrutura e serviços de tecnologia da informação da organização.</li>
+            <li>[O cargo] está autorizado a fazer compras urgentes de equipamentos e serviços até [valor].</li>
+            <li>[O cargo] está autorizado a se comunicar com os clientes.</li>
+            <li>[O cargo] está autorizado a se comunicar com o público.</li>
+            <li>[O cargo] está autorizado a se comunicar com autoridades públicas como governos estaduais e locais e
+                aplicação da lei.</li>
+            <li>[O cargo] está autorizado a cooperar com [nome do fornecedor/parceiro de terceirização].</li>
+            <li>[Adicionar/modificar/remover autorizações nesta seção, conforme necessário]</li>
+        </ul>
+    </li>
+    <li>Etapas específicas de recuperação para os sistemas de informação Infraestrutura e serviços são fornecidos no
+        Apêndice B.</li>
 </ul>
-<h2>Appendix A: Relevant Points of Contact</h2>
-<p>Internal Contacts</p>
-<table style="border-collapse: collapse; width: 100%;" border="1">
+<h2>Apêndice A: Pontos de contato relevantes</h2>
+<p>Contatos internos</p>
+<table border="1" style="border-collapse: collapse; width: 100%;">
     <colgroup>
-        <col style="width: 20%;">
-        <col style="width: 20%;">
-        <col style="width: 20%;">
-        <col style="width: 20%;">
-        <col style="width: 20%;">
+        <col style="width: 20%;" />
+        <col style="width: 20%;" />
+        <col style="width: 20%;" />
+        <col style="width: 20%;" />
+        <col style="width: 20%;" />
     </colgroup>
     <tbody>
         <tr>
-            <td>Name</td>
-            <td>Job title</td>
-            <td>Phone number</td>
-            <td>Email address</td>
-            <td>Alt contact</td>
+            <td>Nome</td>
+            <td>Carga</td>
+            <td>Número de telefone</td>
+            <td>Endereço de email</td>
+            <td>Contato Alternativo</td>
         </tr>
         <tr>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td> </td>
+            <td> </td>
+            <td> </td>
+            <td> </td>
+            <td> </td>
         </tr>
     </tbody>
 </table>
-<p>&nbsp;</p>
-<p>External Contacts</p>
-<table style="border-collapse: collapse; width: 100%;" border="1">
+<p> </p>
+<p>Contatos externos</p>
+<table border="1" style="border-collapse: collapse; width: 100%;">
     <colgroup>
-        <col style="width: 20%;">
-        <col style="width: 20%;">
-        <col style="width: 20%;">
-        <col style="width: 20%;">
-        <col style="width: 20%;">
+        <col style="width: 20%;" />
+        <col style="width: 20%;" />
+        <col style="width: 20%;" />
+        <col style="width: 20%;" />
+        <col style="width: 20%;" />
     </colgroup>
     <tbody>
         <tr>
-            <td>Name</td>
-            <td>Job title</td>
-            <td>Phone number</td>
-            <td>Email address</td>
-            <td>Alt contact</td>
+            <td>Nome</td>
+            <td>Carga</td>
+            <td>Número de telefone</td>
+            <td>Endereço de email</td>
+            <td>Contato Alternativo</td>
         </tr>
         <tr>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td> </td>
+            <td> </td>
+            <td> </td>
+            <td> </td>
+            <td> </td>
         </tr>
     </tbody>
 </table>
-<p>&nbsp;</p>
-<h2>Appendix B: Recovery Steps for Information Systems Infrastructure &amp; Services</h2>
-<p>Specific recovery procedures are described in detail below:</p>
-<table style="border-collapse: collapse; width: 100%;" border="1">
+<p> </p>
+<h2>Apêndice B: Etapas de recuperação para sistemas de informação Infraestrutura e serviços</h2>
+<p>Procedimentos de recuperação específicos são descritos em detalhes abaixo:</p>
+<table border="1" style="border-collapse: collapse; width: 100%;">
     <colgroup>
-        <col style="width: 24.9425%;">
-        <col style="width: 24.9425%;">
-        <col style="width: 24.9425%;">
-        <col style="width: 24.9425%;">
+        <col style="width: 24.9425%;" />
+        <col style="width: 24.9425%;" />
+        <col style="width: 24.9425%;" />
+        <col style="width: 24.9425%;" />
     </colgroup>
     <tbody>
         <tr>
-            <td>Recovery Procedure</td>
-            <td>Person Responsible</td>
-            <td>Person(s) Notified When Complete</td>
-            <td>System to be recovered</td>
+            <td>Procedimento de recuperação</td>
+            <td>Pessoa responsável</td>
+            <td>Pessoas notificadas quando concluídas</td>
+            <td>Sistema a ser recuperado</td>
         </tr>
         <tr>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
+            <td> </td>
+            <td> </td>
+            <td> </td>
+            <td> </td>
         </tr>
     </tbody>
 </table>
-<p>&nbsp;</p>
+<p> </p>
