--- a/app/files/base_policies/Vendor.html
+++ b/app/files/base_policies/Vendor.html
@@ -1,51 +1,65 @@
-<h2>Purpose and Scope</h2>
+<h2>Propósito e Escopo</h2>
 <ul>
-    <li>This policy defines the rules for relationships with the organization&rsquo;s Information Technology (IT)
-        vendors and partners.</li>
-    <li>This policy applies to all IT vendors and partners who have the ability to impact the confidentiality,
-        integrity, and availability of the organization&rsquo;s technology and sensitive information, or who are within
-        the scope of the organization&rsquo;s information security program.</li>
-    <li>This policy applies to all employees and contractors that are responsible for the management and oversight of IT
-        vendors and partners of the organization.</li>
+    <li>Esta política define as regras para relacionamentos com fornecedores e parceiros de Tecnologia da Informação
+        (TI) da organização.</li>
+    <li>Esta política se aplica a todos os fornecedores e parceiros de TI que têm a capacidade de impactar a
+        confidencialidade, integridade e disponibilidade da tecnologia e informações sensíveis da organização,
+        ou que
+        estão dentro do escopo do programa de segurança da informação da organização.</li>
+    <li>Esta política se aplica a todos os funcionários e contratados responsáveis pela gestão e supervisão de
+        fornecedores e parceiros de TI da organização.</li>
 </ul>
-<h2>Background</h2>
+<h2>Antecedentes</h2>
 <ul>
-    <li>The overall security of the organization is highly dependent on the security of its contractual relationships
-        with its IT suppliers and partners. This policy defines &nbsp;requirements for effective management and
-        oversight of such suppliers and partners from an information security perspective. The policy prescribes minimum
-        standards a vendor must meet from an information security standpoint, including security clauses, risk
-        assessments, service level agreements, and incident management.</li>
+    <li>A segurança geral da organização depende altamente da segurança de seus relacionamentos contratuais com seus
+        fornecedores e parceiros de TI. Esta política define os requisitos para uma gestão eficaz e supervisão
+        de tais
+        fornecedores e parceiros do ponto de vista da segurança da informação. A política prescreve padrões
+        mínimos que
+        um fornecedor deve atender do ponto de vista da segurança da informação, incluindo cláusulas de
+        segurança,
+        avaliações de risco, acordos de nível de serviço e gerenciamento de incidentes.</li>
 </ul>
-<h2>References</h2>
+<h2>Referências</h2>
 <ul>
-    <li>Information Security Policy</li>
-    <li>Security Incident Response Policy</li>
+    <li>Política de Segurança da Informação</li>
+    <li>Política de Resposta a Incidentes de Segurança</li>
 </ul>
-<h2>Policy</h2>
+<h2>Política</h2>
 <ul>
-    <li>IT vendors are prohibited from accessing the organization&rsquo;s information security assets until &nbsp;a
-        contract containing security controls is agreed to and signed by the appropriate parties.</li>
-    <li>All IT vendors must comply with the security policies defined and derived from the Information Security Policy
-        (reference (a)).</li>
-    <li>All security incidents by IT vendors or partners must be documented in accordance with the organization&rsquo;s
-        Security Incident Response Policy (reference (b)) and immediately forwarded to the Information Security Manager
-        (ISM).</li>
-    <li>The organization must adhere to the terms of all Service Level Agreements (SLAs) entered into with IT vendors.
-        As terms are updated, and as new ones are entered into, the organization must implement any changes or controls
-        needed to ensure it remains in compliance.</li>
-    <li>Before entering into a contract and gaining access to the parent organization&rsquo;s information systems, IT
-        vendors must undergo a risk assessment.
+    <li>Os fornecedores de TI estão proibidos de acessar os ativos de segurança da informação da organização até que
+        um
+        contrato contendo controles de segurança seja acordado e assinado pelas partes apropriadas.</li>
+    <li>Todos os fornecedores de TI devem cumprir com as políticas de segurança definidas e derivadas da Política de
+        Segurança da Informação (referência (a)).</li>
+    <li>Todos os incidentes de segurança por fornecedores ou parceiros de TI devem ser documentados de acordo com a
+        Política de Resposta a Incidentes de Segurança da organização (referência (b)) e imediatamente
+        encaminhados ao
+        Gerente de Segurança da Informação (ISM).</li>
+    <li>A organização deve aderir aos termos de todos os Acordos de Nível de Serviço (SLAs) firmados com
+        fornecedores de
+        TI. Conforme os termos são atualizados e novos acordos são firmados, a organização deve implementar
+        quaisquer
+        mudanças ou controles necessários para garantir que permaneça em conformidade.</li>
+    <li>Antes de firmar um contrato e obter acesso aos sistemas de informação da organização, os fornecedores de TI
+        devem passar por uma avaliação de risco.
         <ul>
-            <li>Security risks related to IT vendors and partners must be identified during the risk assessment process.
+            <li>Os riscos de segurança relacionados aos fornecedores e parceiros de TI devem ser
+                identificados durante o
+                processo de avaliação de risco.</li>
+            <li>A avaliação de risco deve identificar riscos relacionados à tecnologia da informação e
+                comunicação, bem
+                como riscos relacionados às cadeias de suprimentos de fornecedores de TI, incluindo
+                subfornecedores.
             </li>
-            <li>The risk assessment must identify risks related to information and communication technology, as well as
-                risks related to IT vendor supply chains, to include sub-suppliers.</li>
         </ul>
     </li>
-    <li>IT vendors and partners must ensure that organizational records are protected, safeguarded, and disposed of
-        securely. The organization strictly adheres to all applicable legal, regulatory and contractual requirements
-        regarding the collection, processing, and transmission of sensitive data such as Personally-Identifiable
-        Information (PII).</li>
-    <li>The organization may choose to audit IT vendors and partners to ensure compliance with applicable security
-        policies, as well as legal, regulatory and contractual obligations.</li>
+    <li>Os fornecedores e parceiros de TI devem garantir que os registros organizacionais sejam protegidos,
+        salvaguardados e descartados de forma segura. A organização adere estritamente a todos os requisitos
+        legais,
+        regulatórios e contratuais aplicáveis em relação à coleta, processamento e transmissão de dados
+        sensíveis, como
+        Informações Pessoalmente Identificáveis (PII).</li>
+    <li>A organização pode optar por auditar fornecedores e parceiros de TI para garantir a conformidade com as
+        políticas de segurança aplicáveis, bem como com as obrigações legais, regulatórias e contratuais.</li>
 </ul>
