--- a/app/files/base_policies/Workstation.html
+++ b/app/files/base_policies/Workstation.html
@@ -1,45 +1,54 @@
-<h2>Purpose and Scope</h2>
+<h2>Propósito e Escopo</h2>
 <ul>
-    <li>This policy defines best practices to reduce the risk of data loss/exposure through workstations.</li>
-    <li>This policy applies to all employees and contractors. Workstation is defined as the collection of all
-        company-owned and personal devices containing company data.</li>
+    <li>Esta política define as melhores práticas para reduzir o risco de perda/exposição de dados através de
+        estações
+        de trabalho.</li>
+    <li>Esta política se aplica a todos os funcionários e contratados. Estação de trabalho é definida como a coleção
+        de
+        todos os dispositivos de propriedade da empresa e pessoais que contenham dados da empresa.</li>
 </ul>
-<h2>Policy</h2>
+<h2>Política</h2>
 <ul>
-    <li>Workstation devices must meet the following criteria:
+    <li>Os dispositivos das estações de trabalho devem atender aos seguintes critérios:
         <ul>
-            <li>Operating system must be no more than one generation older than current</li>
-            <li>Device must be encrypted at rest</li>
-            <li>Device must be locked when not in use or when employee leaves the workstation</li>
-            <li>Workstations must be used for authorized business purposes only</li>
-            <li>Loss or destruction of devices should be reported immediately</li>
-            <li>Laptops and desktop devices should run the latest version of antivirus software that has been approved
-                by IT</li>
+            <li>O sistema operacional não deve ser mais do que uma geração anterior ao atual</li>
+            <li>O dispositivo deve ser criptografado em repouso</li>
+            <li>O dispositivo deve ser bloqueado quando não estiver em uso ou quando o funcionário deixar a
+                estação de
+                trabalho</li>
+            <li>As estações de trabalho devem ser usadas apenas para fins comerciais autorizados</li>
+            <li>A perda ou destruição de dispositivos deve ser reportada imediatamente</li>
+            <li>Os laptops e dispositivos de mesa devem executar a versão mais recente do software antivírus
+                aprovado
+                pelo TI</li>
         </ul>
     </li>
-    <li>Desktop &amp; laptop devices
+    <li>Dispositivos de desktop e laptop
         <ul>
-            <li>Employees will be issued a desktop, laptop, or both by the company, based on their job duties.
-                Contractors will provide their own laptops.
+            <li>Os funcionários receberão um desktop, laptop ou ambos pela empresa, com base em suas funções
+                de
+                trabalho. Os contratados fornecerão seus próprios laptops.
                 <ul>
-                    <li>Desktops and laptops must operate on macOS or Windows.</li>
+                    <li>Os desktops e laptops devem operar no macOS ou Windows.</li>
                 </ul>
             </li>
         </ul>
     </li>
-    <li>Mobile devices
+    <li>Dispositivos móveis
         <ul>
-            <li>Mobile devices must be operated as defined in the Removable Media Policy, Cloud Storage, and Bring Your
-                Own Device Policy.</li>
-            <li>Mobile devices must operate on iOS or Android.</li>
-            <li>Company data may only be accessed on mobile devices with Slack and Gmail.</li>
+            <li>Os dispositivos móveis devem ser operados conforme definido na Política de Mídia Removível,
+                Armazenamento em Nuvem e Política de Uso de Dispositivo Pessoal.</li>
+            <li>Os dispositivos móveis devem operar no iOS ou Android.</li>
+            <li>Os dados da empresa só podem ser acessados em dispositivos móveis com Slack e Gmail.</li>
         </ul>
     </li>
-    <li>Removable media
+    <li>Mídia removível
         <ul>
-            <li>Removable media must be operated as defined in the Removable Media Policy, Cloud Storage, and Bring Your
-                Own Device Policy.</li>
-            <li>Removable media is permitted on approved devices as long as it does not conflict with other policies.
+            <li>A mídia removível deve ser operada conforme definido na Política de Mídia Removível,
+                Armazenamento em
+                Nuvem e Política de Uso de Dispositivo Pessoal.</li>
+            <li>A mídia removível é permitida em dispositivos aprovados, desde que não conflite com outras
+                políticas.
             </li>
         </ul>
     </li>
